コース：コーディングUP

--- a/html/04_vocal.html
+++ b/html/04_vocal.html
@@ -110,7 +110,7 @@
 		</section>
 					
 		<!-- #sec2 -->
-		<section id="sec2" class="bgc-lightgray bg-nami mt150 pb100 sm-pb50 mb130 md-mb100 sm-mb80">
+		<section id="sec2" class="bgc-lightgray bg-nami mt150 sm-mt100 pb100 sm-pb50 mb130 md-mb100 sm-mb80">
 			<div class="cols gutter-30 gutter-sm-40 jc-c">
 				<div class="col-12 ta-c view view-slideup">
 					<div class="mt-70 md-mt-60 sm-mt-50 d-ib">
