--- a/html/05_guitar.html
+++ b/html/05_guitar.html
@@ -110,16 +110,314 @@
 		</section>
 					
 		<!-- #sec2 -->
-		
-
+		<section id="sec2" class="bgc-lightgray bg-nami mt150 sm-mt100 pb100 sm-pb50 mb130 md-mb100 sm-mb80">
+			<div class="cols gutter-sm-40 jc-c">
+				<div class="col-12 ta-c view view-slideup">
+					<div class="mt-70 md-mt-60 sm-mt-50 d-ib">
+						<p class="ff-en fz300 sm-fz240 lh180">cource</p>
+						<h2>コース一覧</h2>
+						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+					</div>
+				</div>
+				<section class="col-12 mt50">
+					<h3 class="ribbon-blue -lightgray">エレキギター</h3>
+					<div class="cols nega gutter-sm-40 jc-c">
+						<section class="col-6 col-sm-12 mt30 view view-slideup">
+							<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+								<h4 class="fz130 sm-fz120 d-ib bb-black pb5">スタンダードコース</h4>
+								<p class="mt30">カッティング、アルペジオ、リードギター、音作りetc...エレキギターの演奏に必要な技術や表現力は様々。そんな独学では習得の難しい技術や表現力も、大好きな曲を課題曲にしながら、楽しく、正しく、早く上達することができます。</p>
+							</div>
+						</section>
+						<section class="col-6 col-sm-12 mt30 view view-slideup">
+							<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+								<h4 class="fz130 sm-fz120 d-ib bb-black pb5">テクニカルコース</h4>
+								<p class="mt30">速弾き、ライトハンド奏法、スウィープ奏法などなど、憧れのギターヒーローのスーパーテクニックを身につけたい方のためのコースです。スーパーテクニックを身につけるには努力が必要ですが、間違った方法で努力していても身につけることはできません。正しいトレーニング方法で、確実にテクニックを身につけていきましょう。</p>
+							</div>
+						</section>
+						<section class="col-6 col-sm-12 mt30 view view-slideup">
+							<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+								<h4 class="fz130 sm-fz120 d-ib bb-black pb5">アレンジングコース</h4>
+								<p class="mt30">バンドのギターアレンジはどうやって作ればいいのか。どうすればもっと良いアレンジを作ることができるのか。そんな悩みを持つギタリストのためのコースです、歌や曲を引き立たせるバッキング、かっこいいギターソロなどを自分で作れるようになります。</p>
+							</div>
+						</section>
+						<section class="col-6 col-sm-12 mt30 view view-slideup">
+							<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+								<h4 class="fz130 sm-fz120 d-ib bb-black pb5">作曲コース</h4>
+								<p class="mt30">作曲をしてみたい。もっと良い曲を書けるようになりたい。コード理論を理解したい…など、それぞれの要望に合わせて作曲法を伝授します。誰にでも素敵な曲が作れるようになります。</p>
+							</div>
+						</section>
+					</div>
+				</section>
+				<section class="col-12 mt50">
+					<div class="bt-black-dot pt50">
+						<h3 class="ribbon-blue -lightgray">アコースティックギター・ クラシックギター</h3>
+						<div class="cols nega gutter-sm-40 jc-c">
+							<section class="col-6 col-sm-12 mt30 view view-slideup">
+								<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+									<h4 class="fz130 sm-fz120 d-ib bb-black pb5">スタンダードコース</h4>
+									<p class="mt30">テレビやYouTubeで見るスターに憧れてギターを買ったまま放置されていませんか？初心者の方は乗り越えられない壁にぶつかると「自分には無理だ」と諦めてしまいがち。いきなり高い壁を乗り越えようとせず、先生と一緒に少しずつ、着実にステップアップすることで、誰でも必ずアコギを弾けるようになります。</p>
+								</div>
+							</section>
+							<section class="col-6 col-sm-12 mt30 view view-slideup">
+								<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+									<h4 class="fz130 sm-fz120 d-ib bb-black pb5">弾き語りコース</h4>
+									<p class="mt30">「うまく弾き語りができるようになりたい」という方から「人前で演奏できるようになりたい」という方まで、ギターの弾き語りならではの技術・表現力を培います。</p>
+								</div>
+							</section>
+							<section class="col-6 col-sm-12 mt30 view view-slideup">
+								<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+									<h4 class="fz130 sm-fz120 d-ib bb-black pb5">ソロギターコース</h4>
+									<p class="mt30">ギター１本でメロディーと伴奏両方を奏でるソロギターは、より高度な技術・表現力を必要とされます。憧れのソロギターに挑戦したい方も、もっとうまくなりたいという方も、このコースで確実に上達しましょう。</p>
+								</div>
+							</section>
+							<section class="col-6 col-sm-12 mt30 view view-slideup">
+								<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+									<h4 class="fz130 sm-fz120 d-ib bb-black pb5">作曲コース</h4>
+									<p class="mt30">コード理論、アレンジなど作曲をするための基本を学びます。大切な人の前でオリジナル曲を弾き語り、そんな夢をかなえます。</p>
+								</div>
+							</section>
+						</div>
+					</div>
+				</section>
+			</div>
+		</section>
+				
 		<!-- #sec3 -->
+		<section id="sec3" class="mtb100 sm-mtb70">
+			<div class="cols gutter-70 gutter-md-40">
+				<div class="col-8">
+					<div class="d-f sm-d-b ai-fe">
+						<p class="ff-en fz270 lh100">lesson</p>
+						<h2 class="pl30 sm-pl0 fz120 sm-fz100">レッスン内容例</h2>
+					</div>
+					<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+				</div>
+			</div>
+			<div class="cols gutter-70 gutter-md-40">
+				<section class="col-10 col-sm-12 mt50 sm-mt-20 z1 ord1 sm-ord2">
+					<div class="bg-dots bd-blue ptb60 pl80 pr60 sm-ptb40 sm-pl30 sm-pr30 bdrs15">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">エレキギター</h3>
+						<section class="mt40">
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 01</h4>
+							<p class="mt25">エレキギターを基礎から学び、ハンマリング、プリング、基本的なチョーキングなどのテクニックをマスターしタブ譜（楽譜）を使って演奏することができるようになります。</p>
+						</section>
+						<section class="mt30">
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 02</h4>
+							<p class="mt25">初級で身に付けたテクニックを応用し、さらに音楽表現の幅を広げていきます。アドリブ演奏も体験し、バンドの中でのアンサンブルを意識しながら自分で音楽を作ることの楽しみを見つけます。テクニックと同時に音楽に最低限必要な理論も身に付きます。</p>
+						</section>
+						<section class="mt30">
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 03</h4>
+							<p class="mt25">音楽ジャンルの幅を広げ、ブルース・ジャズ・スケールアドリブ等、様々なジャンルの楽曲のアレンジ 、テクニックを身に付けギタリストとしての個性の確立を目指します。</p>
+						</section>
+					</div>
+				</section>
+				<section class="col-10 col-sm-12 mt50 sm-mt30 z1 ord3">
+					<div class="bg-dots bd-blue ptb60 pl80 pr60 sm-ptb40 sm-pl30 sm-pr30 bdrs15">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">アコースティックギター</h3>
+						<section class="mt40">
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 01</h4>
+							<p class="mt25">演奏する上で必要な構え方、チューニング、コードストロークの練習をします。 左手のスムーズな指運びと右手の正確なピッキングを養っていきます。同時に簡単な曲を演奏できるようにします。</p>
+						</section>
+						<section class="mt30">
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 02</h4>
+							<p class="mt25">フィンガリングの練習をし、バッキングパターンのバリエーションを増やします。 基本的な指運びとピッキングテクニックを学ぶ際には、聞き覚えのある楽曲のメロディーを弾くことで無理なく学んでいきます。</p>
+						</section>
+						<section class="mt30">
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 03</h4>
+							<p class="mt25">様々な曲に対応できるよう、より高度な奏法を身に付け実力をさらにレベルアップさせます。 右手ストロークのトレーニングは段階的に難易度を上げていき、フィンガーアルペジオのテクニックは右手指の構造と運動要素を考慮しながら段階的に導入。フラットピッキングアルペジオも順次導入し、演奏の幅を広げていきます。</p>
+						</section>
+					</div>
+				</section>
+				<section class="col-10 col-sm-12 mt50 sm-mt30 z1 ord4">
+					<div class="bg-dots bd-blue ptb60 pl80 pr60 sm-ptb40 sm-pl30 sm-pr30 bdrs15">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">クラシックギター</h3>
+						<section class="mt40">
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 01</h4>
+							<p class="mt25">まず楽器に触れて名称や持ち方等の基礎知識を学ぶことからスタートします。クラシックギターを使って様々なレパートリーを演奏していきながら右手&左手のフォーム、音階、スラー、アルペジオなどの基本技術を楽しく無理なく学んでいきます。同時に簡単な曲を演奏できるようにします。</p>
+						</section>
+						<section class="mt30">
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 02</h4>
+							<p class="mt25">右手のアポヤンド、アルアイレ、左手によるスラーを習得します。全調の音階、トレモロ奏法、 装飾音等を練習します。これらの技術を身につけながら演奏の幅を広げていきます。</p>
+						</section>
+						<section class="mt30">
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 03</h4>
+							<p class="mt25">初級・中級で学んだ技術を磨きながら新たにダイナミズム、アポ、シンコペーション、リズム等を学んでいきます。 初見演奏、暗譜でのソロ演奏を習得し、幅広い音楽表現力を高めていきます。</p>
+						</section>
+					</div>
+				</section>
+				<div class="col-5 col-sm-6 return-3 return-sm-0 sm-mr20 mt-80 sm-mt-60 z2 ord2 sm-ord1">
+					<figure><img src="../img/guitar/sec3-img1.jpg" width="314" height="290" class="img-rspsv-full" alt="レッスン内容例"></figure>
+				</div>
+			</div>
+		</section>
 		
-
 		<!-- #sec4 -->
-		<section id="sec4" class="course-link pb40 bgc-lightgray sm-plr20">
+		<section id="sec4" class="bgc-lightgray bg-nami pt70 sm-pt50 pb70 mb100 md-mb80 sm-mb60">
+			<div class="cols gutter-40">
+				<div class="col-12 view view-slideup">
+					<div class="d-ib">
+						<div class="d-f sm-d-b ai-c">
+							<p class="ff-en fz270 lh180">present</p>
+							<h2 class="ml30 sm-ml0">入会特典 / 楽器プレゼント</h2>
+						</div>
+						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+					</div>
+					<section class="mt50 sm-mt40 view view-slideup">
+						<h3 class="ribbon-blue -lightgray">エレキギターセット</h3>
+						<div class="mt30 bgc-white p50 md-p30 bdrs15">
+							<div class="cols nega gutter-50 gutter-md-30 ai-c jc-c">
+								<div class="col-7 col-sm-12">
+									<p class="fz120 md-fz110 d-ib bb-black pb5">KIKUTANI MUSIC エレキギター</p><br>
+									<p class="fz120 md-fz110 d-ib bb-black pb5 mt10">パピースペシャル15点セット</p>
+									<div class="d-f sm-d-b mt40 sm-mt25">
+										<ul class="li-dots">
+											<li>本体</li>
+											<li>ソフトケース</li>
+											<li>ギタースタンド</li>
+											<li>シールド</li>
+											<li>アンプ (RMS-10)</li>
+											<li>クリップチューナー</li>
+											<li>ストラップ</li>
+										</ul>
+										<ul class="li-dots ml50 md-ml30 sm-ml0">
+											<li>ピック</li>
+											<li>ピックケース</li>
+											<li>ギタークロス</li>
+											<li>弦</li>
+											<li>ストリングワインダー</li>
+											<li>パピーバッグ</li>
+											<li>パピースペシャルピック</li>
+											<li>スタジオ利用券 7000円分</li>
+										</ul>
+									</div>
+								</div>
+								<figure class="col-5 col-sm-8 ta-c sm-mt30"><img src="../img/guitar/sec4-img1.jpg" width="319" height="211" class="img-rspsv" alt="エレキギター"></figure>
+							</div>
+							<p class="mt30">体験レッスン当日にご入会いただいた方は入会金のみ<span class="c-red">(¥17,800)</span>で差し上げます！</p>
+						</div>
+						<div class="mt30 bgc-white p50 md-p30 bdrs15">
+							<div class="cols nega gutter-50 gutter-md-30 ai-c jc-c">
+								<div class="col-7 col-sm-12">
+									<p class="fz120 md-fz110 d-ib bb-black pb5 sm-d-n">KYORITSU CORPORATION キッズエレキギター</p><br>
+									<p class="fz120 md-fz110 bb-black pb5 d-n sm-d-ib">KYORITSU CORPORATION</p><br class="d-n sm-d-b">
+									<p class="fz120 md-fz110 bb-black pb5 d-n sm-d-ib sm-mt10">キッズエレキギター</p><br class="d-n sm-d-b">
+									<p class="fz120 md-fz110 d-ib bb-black pb5 mt10">パピースペシャル5点セット</p>
+									<div class="d-f sm-d-b mt40 sm-mt25">
+										<ul class="li-dots">
+											<li>本体</li>
+											<li>ソフトケース</li>
+											<li>パピーバッグ</li>
+										</ul>
+										<ul class="li-dots ml50 md-ml30 sm-ml0">
+											<li>パピースペシャルピック</li>
+											<li>スタジオ利用券 7000円分</li>
+										</ul>
+									</div>
+									<p class="mt20">22インチスケールのミニギター。お子様用や女性、旅行先での練習用に最適な小型のレスポール。ネックスケールは22インチ、重量は約2.7kgでピックアップにはハムバッカーを2基搭載しています。</p>
+								</div>
+								<figure class="col-5 col-sm-6 ta-c sm-mt30"><img src="../img/guitar/sec4-img2.jpg" width="205" height="271" class="img-rspsv" alt="キッズエレキギター"></figure>
+							</div>
+							<p class="mt30">体験レッスン当日にご入会いただいた方は入会金のみ<span class="c-red">(¥17,800)</span>で差し上げます！</p>
+						</div>
+					</section>
+					<section class="mt50 sm-mt40 view view-slideup">
+						<h3 class="ribbon-blue -lightgray">アコースティックギターセット</h3>
+						<div class="mt30 bgc-white p50 md-p30 bdrs15">
+							<div class="cols nega gutter-50 gutter-md-30 ai-c jc-c">
+								<div class="col-7 col-sm-12">
+									<p class="fz120 md-fz110 d-ib bb-black pb5 sm-d-n">KYORITSU CORPORATION アコースティックギター</p><br>
+									<p class="fz120 md-fz110 bb-black pb5 d-n sm-d-ib">KYORITSU CORPORATION</p><br class="d-n sm-d-b">
+									<p class="fz120 md-fz110 bb-black pb5 d-n sm-d-ib sm-mt10">アコースティックギター</p><br class="d-n sm-d-b">
+									<p class="fz120 md-fz110 d-ib bb-black pb5 mt10">パピースペシャル13点セット</p>
+									<div class="d-f sm-d-b mt40 sm-mt25">
+										<ul class="li-dots">
+											<li>本体</li>
+											<li>ソフトケース</li>
+											<li>クリップチューナー</li>
+											<li>ストラップ</li>
+											<li>ピック</li>
+											<li>ピックケース</li>
+											<li>弦</li>
+										</ul>
+										<ul class="li-dots ml50 md-ml30 sm-ml0">
+											<li>ストリングワインダー</li>
+											<li>コンパクトギタースタンド</li>
+											<li>教則DVD</li>
+											<li>パピーバッグ</li>
+											<li>パピースペシャルピック</li>
+											<li>スタジオ利用券 7000円分</li>
+										</ul>
+									</div>
+								</div>
+								<figure class="col-5 col-sm-8 ta-c sm-mt30"><img src="../img/guitar/sec4-img3.jpg" width="286" height="236" class="img-rspsv" alt="アコースティックギター"></figure>
+							</div>
+							<p class="mt30">体験レッスン当日にご入会いただいた方は入会金のみ<span class="c-red">(¥17,800)</span>で差し上げます！</p>
+						</div>
+						<div class="mt30 bgc-white p50 md-p30 bdrs15">
+							<div class="cols nega gutter-50 gutter-md-30 ai-c jc-c">
+								<div class="col-7 col-sm-12">
+									<p class="fz120 md-fz110 d-ib bb-black pb5 sm-d-n">KYORITSU CORPORATION キッズアコギ</p><br>
+									<p class="fz120 md-fz110 bb-black pb5 d-n sm-d-ib">KYORITSU CORPORATION</p><br class="d-n sm-d-b">
+									<p class="fz120 md-fz110 bb-black pb5 d-n sm-d-ib sm-mt10">キッズアコギ</p><br class="d-n sm-d-b">
+									<p class="fz120 md-fz110 d-ib bb-black pb5 mt10">パピースペシャル11点セット</p>
+									<div class="d-f sm-d-b mt40 sm-mt25">
+										<ul class="li-dots">
+											<li>本体</li>
+											<li>ソフトケース</li>
+											<li>ピック</li>
+											<li>ピックケース</li>
+											<li>クロス</li>
+											<li>クリップチューナー</li>
+										</ul>
+										<ul class="li-dots ml50 md-ml30 sm-ml0">
+											<li>弦</li>
+											<li>ゴムカポ</li>
+											<li>パピーバッグ</li>
+											<li>パピースペシャルピック</li>
+											<li>スタジオ利用券 7000円分</li>
+										</ul>
+									</div>
+								</div>
+								<figure class="col-5 col-sm-9 ta-c sm-mt30"><img src="../img/guitar/sec4-img4.jpg" width="333" height="233" class="img-rspsv" alt="キッズアコースティックギター"></figure>
+							</div>
+							<p class="mt30">体験レッスン当日にご入会いただいた方は入会金のみ<span class="c-red">(¥17,800)</span>で差し上げます！</p>
+						</div>
+					</section>
+					<section class="mt50 sm-mt40 view view-slideup">
+						<h3 class="ribbon-blue -lightgray">クラシックギターセット</h3>
+						<div class="mt30 bgc-white p50 md-p30 bdrs15">
+							<div class="cols nega gutter-50 gutter-md-30 ai-c jc-c">
+								<div class="col-7 col-sm-12">
+									<p class="fz120 md-fz110 d-ib bb-black pb5 sm-d-n">KYORITSU CORPORATION クラシックギター</p><br>
+									<p class="fz120 md-fz110 bb-black pb5 d-n sm-d-ib">KYORITSU CORPORATION</p><br class="d-n sm-d-b">
+									<p class="fz120 md-fz110 bb-black pb5 d-n sm-d-ib sm-mt10">クラシックギター</p><br class="d-n sm-d-b">
+									<p class="fz120 md-fz110 d-ib bb-black pb5 mt10">パピースペシャル5点セット</p>
+									<div class="d-f sm-d-b mt40 sm-mt25">
+										<ul class="li-dots">
+											<li>本体</li>
+											<li>ソフトケース</li>
+											<li>パピーバッグ</li>
+										</ul>
+										<ul class="li-dots ml50 md-ml30 sm-ml0">
+											<li>パピースペシャルピック</li>
+											<li>スタジオ利用券 7000円分</li>
+										</ul>
+									</div>
+								</div>
+								<figure class="col-5 col-sm-6 ta-c sm-mt30"><img src="../img/guitar/sec4-img5.jpg" width="226" height="306" class="img-rspsv" alt="クラシックギター"></figure>
+							</div>
+							<p class="mt30">体験レッスン当日にご入会いただいた方は入会金のみ<span class="c-red">(¥17,800)</span>で差し上げます！</p>
+						</div>
+					</section>
+				</div>
+			</div>
+		</section>
+
+		<!-- #sec5 -->
+		<section id="sec5" class="course-link pb40 bgc-gray sm-plr20">
 			<div class="cols gutter-20 gutter-sm-10">
 				<div class="col-12 mt-20">
-					<h3 class="ribbon-black -lightgray">バンド系コース</h3>
+					<h3 class="ribbon-black -gray">バンド系コース</h3>
 				</div>
 				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
 					<a href="/vocal" class="hov course1"><span>vocal</span>ボーカル</a>
