--- a/html/07_drums.html
+++ b/html/07_drums.html
@@ -110,16 +110,148 @@
 		</section>
 					
 		<!-- #sec2 -->
-		
-
+		<section id="sec2" class="bgc-lightgray bg-nami mt150 sm-mt100 pb100 sm-pb50 mb130 md-mb100 sm-mb80">
+			<div class="cols gutter-30 gutter-sm-40">
+				<div class="col-12 ta-c view view-slideup">
+					<div class="mt-70 md-mt-60 sm-mt-50 d-ib">
+						<p class="ff-en fz300 sm-fz240 lh180">cource</p>
+						<h2>コース一覧</h2>
+						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+					</div>
+				</div>
+				<section class="col-6 col-sm-12 mt50 view view-slideup">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">スタンダードコース</h3>
+						<p class="mt30">ドラムは全身を使う楽器であるだけに、悪いクセもつきやすいと言えます。できるだけ早い段階から正しいトレーニングを行うことが上達の近道です。初心者も経験者も、このコースでしっかり基礎から技術・表現力を身につけましょう。</p>
+					</div>
+				</section>
+				<section class="col-6 col-sm-12 mt50 sm-mt30 view view-slideup">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">アレンジングコース</h3>
+						<p class="mt30">バンドのドラムアレンジはどうやって作ればいいのか。どうすればもっと良いアレンジを作ることができるのか。そんな悩みを持つドラマーのためのコースです。曲に一番合ったリズムパターン、かっこいいフィルインフレーズなどの作り方をこのコースで学びましょう。</p>
+					</div>
+				</section>
+				<section class="col-6 col-sm-12 mt30 view view-slideup">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">パーカッションコース</h3>
+						<p class="mt30">パーカッションと一口に言っても、扱う打楽器は様々。演奏方法も異なりますので、このコースでしっかりひとつずつ、技術や表現力を身につけましょう。吹奏楽部さんにも対応しています。</p>
+					</div>
+				</section>
+				<section class="col-6 col-sm-12 mt30 view view-slideup">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">キッズドラムコース<span class="fz70">（グループレッスン）</span></h3>
+						<p class="mt30">みんなで楽しく、そしてカッコ良くドラムを叩いてみませんか？リズムは音楽の基礎！小さい頃からドラムを叩いてリズム感を身に付けましょう。</p>
+					</div>
+				</section>
+			</div>
+		</section>
+				
 		<!-- #sec3 -->
-		
+		<section id="sec3" class="mt200 md-mt150 sm-mt50 mb100 sm-b70">
+			<div class="cols gutter-70 gutter-md-40">
+				<div class="col-8">
+					<div class="d-f sm-d-b ai-fe">
+						<p class="ff-en fz270 lh100">lesson</p>
+						<h2 class="pl30 sm-pl0 fz120 sm-fz100">レッスン内容例</h2>
+					</div>
+					<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+				</div>
+			</div>
+			<div class="cols gutter-70 gutter-md-40">
+				<section class="col-10 col-sm-12 mt50 sm-mt-20 z1 ord1 sm-ord2">
+					<div class="bg-dots bd-blue ptb60 pl80 pr60 sm-ptb40 sm-pl30 sm-pr30 bdrs15">						
+						<section>
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 01</h4>
+							<p class="mt25">シングルストロークを基本としたスティックコントロール 、コーディネーションなどの基礎トレーニングをゆっくり着実に行い、無理なくリズムパターンやフィルインの実践パターンへ発展させていきます。</p>
+						</section>
+						<section class="mt30">
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 02</h4>
+							<p class="mt25">ダブルストロークを中心としたスティックコントロールと16ビートやシャッフル等の3連符のマスターを目指します。また、聴く力を養いドラムデュエットやレパートリーを演奏することによってアンサンブル力を身につけていきます。</p>
+						</section>
+						<section class="mt30">
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 03</h4>
+							<p class="mt25">ポリリズム等の奇数連符のマスターをします。ジャズやボサノバ等様々なリズムスタイルの演奏を習得すると共に幅広く音楽を学び、音楽を自由に表現できる力を養っていきます。</p>
+						</section>
+					</div>
+				</section>
+				<div class="col-5 col-sm-6 return-3 return-sm-0 sm-mr20 mt-150 md-mt-100 sm-mt-60 z2 ord2 sm-ord1">
+					<figure><img src="../img/drums/sec3-img1.jpg" width="314" height="290" class="img-rspsv-full" alt="レッスン内容例"></figure>
+				</div>
+			</div>
+		</section>
 
 		<!-- #sec4 -->
-		<section id="sec4" class="course-link pb40 bgc-lightgray sm-plr20">
+		<section id="sec4" class="bgc-lightgray bg-nami pt70 sm-pt50 pb70 mb100 md-mb80 sm-mb60">
+			<div class="cols gutter-40">
+				<div class="col-12 view view-slideup">
+					<div class="d-ib">
+						<div class="d-f sm-d-b ai-c">
+							<p class="ff-en fz270 lh180">present</p>
+							<h2 class="ml30 sm-ml0">入会特典 / 楽器プレゼント</h2>
+						</div>
+						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+					</div>
+					<section class="mt50 sm-mt40 view view-slideup">
+						<h3 class="ribbon-blue -lightgray">電子ドラムセット</h3>
+						<div class="mt30 bgc-white p50 md-p30 bdrs15">
+							<div class="cols nega gutter-50 gutter-md-30 ai-c jc-c">
+								<div class="col-7 col-md-8 col-sm-12">
+									<p class="fz120 md-fz110 d-ib bb-black pb5 sm-d-n">MEDELI 電子ドラム DD-401J-DIY パピーキット</p><br>
+									<p class="fz120 md-fz110 bb-black pb5 d-n sm-d-ib">MEDELI 電子ドラム DD-401J-DIY</p><br class="d-n sm-d-b">
+									<p class="fz120 md-fz110 bb-black pb5 d-n sm-d-ib mt10">パピーキット</p>
+									<ul class="li-dots mt40 sm-mt25">
+										<li>ドラムパッド×4</li>
+										<li>シンバルパッド×3<span class="fz80"> (1枚はチョーク機能付き)</span></li>
+										<li>ハイハットコントロールペダル</li>
+										<li>バスドラムペダル</li>
+										<li>音源モジュール</li>
+										<li>ドラムスティック</li>
+									</ul>
+								</div>
+								<figure class="col-5 col-md-4 col-sm-7 ta-c sm-mt30"><img src="../img/drums/sec4-img1.jpg" width="211" height="187" class="img-rspsv" alt="電子ドラム"></figure>
+							</div>
+							<p class="mt30">体験レッスン当日にご入会いただいた方は<span class="c-red">¥7,000(入会金¥17,800)</span>で差し上げます！</p>
+						</div>
+						<div class="mt30 bgc-white p50 md-p30 bdrs15">
+							<div class="cols nega gutter-50 gutter-md-30 ai-c jc-c">
+								<div class="col-7 col-md-8 col-sm-12">
+									<p class="fz120 md-fz110 d-ib bb-black pb5 sm-d-n">MEDELI 電子ドラム DD-610J-DIY パピーキット</p><br>
+									<p class="fz120 md-fz110 bb-black pb5 d-n sm-d-ib">MEDELI 電子ドラム DD-610J-DIY</p><br class="d-n sm-d-b">
+									<p class="fz120 md-fz110 bb-black pb5 d-n sm-d-ib mt10">パピーキット</p>
+									<div class="d-f sm-d-b mt40 sm-mt25">
+										<ul class="li-dots">
+											<li>ドラムパッド×4</li>
+											<li>シンバルパッド×3<span class="fz80">(チョーク機能付き)</span></li>
+											<li>シンバルパッド×1<span class="fz80">(チョーク機能なし)</span></li>
+											<li>ハイハットコントロールペダル</li>
+											<li>キックパッド</li>
+											<li>キックペダル</li>
+											<li>音源モジュール</li>
+										</ul>
+										<ul class="li-dots ml30 sm-ml0">
+											<li>ドラムスティック</li>
+											<li>ケーブルタイ×5</li>
+											<li>ドラムキー</li>
+											<li>専用アダプター</li>
+											<li>拡張オプションパーツ</li>
+											<li>ドラムパッド</li>
+										</ul>
+									</div>
+								</div>
+								<figure class="col-5 col-md-4 col-sm-7 ta-c sm-mt30"><img src="../img/drums/sec4-img2.jpg" width="225" height="247" class="img-rspsv" alt="電子ドラム"></figure>
+							</div>
+							<p class="mt30">体験レッスン当日にご入会いただいた方は<span class="c-red">¥20,000(入会金¥17,800)</span>で差し上げます！</p>
+						</div>
+					</section>
+				</div>
+			</div>
+		</section>
+
+		<!-- #sec5 -->
+		<section id="sec5" class="course-link pb40 bgc-gray sm-plr20">
 			<div class="cols gutter-20 gutter-sm-10">
 				<div class="col-12 mt-20">
-					<h3 class="ribbon-black -lightgray">バンド系コース</h3>
+					<h3 class="ribbon-black -gray">バンド系コース</h3>
 				</div>
 				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
 					<a href="/vocal" class="hov course1"><span>vocal</span>ボーカル</a>
