--- a/html/09_dtm.html
+++ b/html/09_dtm.html
@@ -110,10 +110,65 @@
 		</section>
 					
 		<!-- #sec2 -->
-		
+		<section id="sec2" class="bgc-lightgray bg-nami mt150 sm-mt100 pb100 sm-pb50 mb130 md-mb100 sm-mb80">
+			<div class="cols gutter-30 gutter-sm-40 jc-c">
+				<div class="col-12 ta-c view view-slideup">
+					<div class="mt-70 md-mt-60 sm-mt-50 d-ib">
+						<p class="ff-en fz300 sm-fz240 lh180">cource</p>
+						<h2>コース一覧</h2>
+						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+					</div>
+				</div>
+				<section class="col-6 col-sm-12 mt50 view view-slideup">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">DTM 初心者コース</h3>
+						<p class="mt30">どのソフトでどんなことが出来るのか、どんなテクニックが使えるのか。ソフトの使い方から購入前のアドバイスまで。初心者はまずこのコースから入って、できる幅を広げていきましょう。</p>
+						<p class="mt10 fz90">[ 対応ソフト ]<br>
+							Cubase / Sonar / Live8 / Logic / Singer Song Writer</p>
+					</div>
+				</section>
+				<section class="col-6 col-sm-12 mt50 sm-mt30 view view-slideup">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">DTM 中～上級者コース<span class="fz70">（Cubase使用）</span></h3>
+						<p class="mt30">理論、アレンジ、さらに上を目指したい人向けのコースです。経験豊かな講師が的確にアドバイス。トップコンポーザーの仲間入りをしたいのならこのコースです。レーベルを立ち上げる現役講師から業界で勝ち残るためのテクニックやビジネスに役立つレッスンも行っていきます。</p>
+					</div>
+				</section>
+			</div>
+		</section>
 
 		<!-- #sec3 -->
-		
+		<section id="sec3" class="mt200 md-mt150 sm-mt50 mb100 sm-b70">
+			<div class="cols gutter-70 gutter-md-40">
+				<div class="col-8">
+					<div class="d-f sm-d-b ai-fe">
+						<p class="ff-en fz270 lh100">lesson</p>
+						<h2 class="pl30 sm-pl0 fz120 sm-fz100">レッスン内容例</h2>
+					</div>
+					<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+				</div>
+			</div>
+			<div class="cols gutter-70 gutter-md-40">
+				<section class="col-10 col-sm-12 mt50 sm-mt-20 z1 ord1 sm-ord2">
+					<div class="bg-dots bd-blue ptb60 pl80 pr60 sm-ptb40 sm-pl30 sm-pr30 bdrs15">						
+						<section>
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 01</h4>
+							<p class="mt25">ソフトの基本～応用操作、作曲の基礎テクニック、コード、伴奏の作り方、リズムや楽器のアレンジ方法、シンセサイザーの使い方、メロディー等、音楽理論、機器の操作方法を学び、楽しみながら上達していきます。</p>
+						</section>
+						<section class="mt30">
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 02</h4>
+							<p class="mt25">これまでに身に付けた理論を応用し、さらに音楽表現の幅を広げていきます。パソコンを使っての作編曲、MIDIデータの打ち込みオーディオデータ編集まで、自分で音楽を作ることの楽しみを見つけていきます。</p>
+						</section>
+						<section class="mt30">
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 03</h4>
+							<p class="mt25">さらに高度なリミックスやアレンジ、ボーカルや楽器演奏のレコーディング、サウンド編集、マスタリングの技術、音楽理論、アレンジ等の知識を、より実践的に学んでいきます。これらを習得し、創作意欲を高めると共に表現力も培っていきます。</p>
+						</section>
+					</div>
+				</section>
+				<div class="col-5 col-sm-6 return-3 return-sm-0 sm-mr20 mt-150 md-mt-100 sm-mt-60 z2 ord2 sm-ord1">
+					<figure><img src="../img/dtm/sec3-img1.jpg" width="314" height="290" class="img-rspsv-full" alt="レッスン内容例"></figure>
+				</div>
+			</div>
+		</section>
 
 		<!-- #sec4 -->
 		<section id="sec4" class="course-link pb40 bgc-lightgray sm-plr20">
