--- a/html/12_violin.html
+++ b/html/12_violin.html
@@ -109,34 +109,238 @@
 		</section>
 					
 		<!-- #sec2 -->
+		<section id="sec2" class="bgc-lightgray bg-nami mt150 sm-mt100 pb100 sm-pb50 mb130 md-mb100 sm-mb80">
+			<div class="cols gutter-30 gutter-sm-40">
+				<div class="col-12 ta-c view view-slideup">
+					<div class="mt-70 md-mt-60 sm-mt-50 d-ib">
+						<p class="ff-en fz300 sm-fz240 lh180">cource</p>
+						<h2>コース一覧</h2>
+						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+					</div>
+				</div>
+				<section class="col-6 col-sm-12 mt50 view view-slideup">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">クラシックバイオリンコース</h3>
+						<p class="mt30">温かみのある美しい音色を創り出すバイオリン。どなたでも初めてバイオリンを楽しむうえで、無理なくテクニックのステップアップをはかります。アンサンブルの基礎作りや、ハーモニーの心地よさを経験。クラシックの名曲をバイオリンの豊かな音色で表現しましょう。</p>
+					</div>
+				</section>
+				<section class="col-6 col-sm-12 mt50 sm-mt30 view view-slideup">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">ポピュラーバイオリンコース</h3>
+						<p class="mt30">弦楽器の花形・バイオリン。音域は4オクターブ以上と広く、演奏者のこまやかな感情を全て音で表現することができる、情感豊かな音色が何よりも魅力です。バイオリンを楽しみながら演奏力を身につけ、初めての方から経験のある方まで、ポピュラー音楽を中心に幅広いジャンルの音楽を自由に表現しましょう。</p>
+					</div>
+				</section>
+				<section class="col-6 col-sm-12 mt30 view view-slideup">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">ジャズバイオリンコース</h3>
+						<p class="mt30">弾き手の感情を自在に表現するバイオリン。ジャズの曲を通して基礎を学んでいき、アドリブが自由にできるためのノウハウを一から学べます。これからジャズを始めたい方から、もっと上手に弾けるようになりたい方まで幅広く対応します。一味違ったバイオリンの魅力を体感しましょう。</p>
+					</div>
+				</section>
+			</div>
+		</section>
 		
-
 		<!-- #sec3 -->
+		<section id="sec3" class="mt200 md-mt150 sm-mt50 mb100 sm-b70">
+			<div class="cols gutter-70 gutter-md-40">
+				<div class="col-8">
+					<div class="d-f sm-d-b ai-fe">
+						<p class="ff-en fz270 lh100">lesson</p>
+						<h2 class="pl30 sm-pl0 fz120 sm-fz100">レッスン内容例</h2>
+					</div>
+					<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+				</div>
+			</div>
+			<div class="cols gutter-70 gutter-md-40">
+				<section class="col-10 col-sm-12 mt50 sm-mt-20 z1 ord1 sm-ord2">
+					<div class="bg-dots bd-blue ptb60 pl80 pr60 sm-ptb40 sm-pl30 sm-pr30 bdrs15">						
+						<section>
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 01</h4>
+							<p class="mt25">初めての方でもわかりやすく、まず楽器に触れて音を出すことからスタートします。バイオリンで最も大切な弓の動かし方や正しい音程をとる練習も、無理なく身に付けることができます。親しみやすい曲を中心に演奏していきます。</p>
+						</section>
+						<section class="mt30">
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 02</h4>
+							<p class="mt25">基本テクニックをしっかり定着させ、ポジション移動や重音の奏法、ビブラート奏法など、演奏に必要なテクニックを新たに学びます。クラッシックからポピュラーまでの幅広いレパートリーにより、豊かな表現力を身に付けていきます。</p>
+						</section>
+						<section class="mt30">
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 03</h4>
+							<p class="mt25">幅広い音域で自由に表現できるボーイングやフィンガリング、フラジオレット奏法などより高度な技術の習得を身につけ、バイオリンならではの美しい音色を追及し、様々なレパートリー曲にふさわしい演奏表現をできるようにしていきます。</p>
+						</section>
+					</div>
+				</section>
+				<div class="col-5 col-sm-6 return-3 return-sm-0 sm-mr20 mt-150 md-mt-100 sm-mt-60 z2 ord2 sm-ord1">
+					<figure><img src="../img/violin/sec3-img1.jpg" width="314" height="290" class="img-rspsv-full" alt="レッスン内容例"></figure>
+				</div>
+			</div>
+		</section>
 		
-
 		<!-- #sec4 -->
-		<section id="sec4" class="course-link pb40 bgc-lightgray sm-plr20">
+		<section id="sec4" class="bgc-lightgray bg-nami pt70 sm-pt50 pb70 mb100 md-mb80 sm-mb60">
+			<div class="cols gutter-40">
+				<div class="col-12 view view-slideup">
+					<div class="d-ib">
+						<div class="d-f sm-d-b ai-c">
+							<p class="ff-en fz270 lh180">present</p>
+							<h2 class="ml30 sm-ml0">入会特典 / 楽器プレゼント</h2>
+						</div>
+						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+						<p class="mt40">すべての楽器にパピーバッグ、スタジオ利用券7,000円分付き！</p>
+					</div>
+					<section class="mt50 sm-mt40 view view-slideup">
+						<h3 class="ribbon-blue -lightgray">バイオリンセット</h3>
+						<div class="mt30 bgc-white p50 md-p30 bdrs15">
+							<div class="cols nega gutter-50 gutter-md-30 ai-c jc-c">
+								<div class="col-7 col-md-8 col-sm-12">
+									<p class="fz120 md-fz110 d-ib bb-black pb5">KIKUTANI MUSIC SV-120 パピーセット</p>
+									<div class="d-f sm-d-b mt40 sm-mt25">
+										<ul class="li-dots">
+											<li>本体</li>
+											<li>ケース</li>
+											<li>弓</li>
+										</ul>
+										<ul class="li-dots ml50 md-ml30 sm-ml0">
+											<li>松脂</li>
+											<li>肩当て</li>
+										</ul>
+									</div>
+									<table class="mt20 tbl-simple">
+										<tr>
+											<th>表板</th>
+											<td>：ソリッドスプルース</td>
+										</tr>
+										<tr>
+											<th>横、裏板</th>
+											<td>：ソリッドメイプル</td>
+										</tr>
+										<tr>
+											<th>ネック</th>
+											<td>：メイプル</td>
+										</tr>
+										<tr>
+											<th>指板、糸巻き、顎あて</th>
+											<td>：ブラックハードウッド</td>
+										</tr>
+										<tr>
+											<th>サイズ</th>
+											<td>：4/4、3/4、1/2、1/4、1/8、1/10、1/16</td>
+										</tr>
+									</table>
+								</div>
+								<figure class="col-5 col-md-4 col-sm-8 ta-c sm-mt30"><img src="../img/violin/sec4-img1.jpg" width="261" height="203" class="img-rspsv" alt="バイオリン"></figure>
+							</div>
+							<p class="mt30">体験レッスン当日にご入会いただいた方は入会金のみ<span class="c-red">(¥17,800)</span>で差し上げます！</p>
+						</div>
+						<div class="mt30 bgc-white p50 md-p30 bdrs15">
+							<div class="cols nega gutter-50 gutter-md-30 ai-c jc-c">
+								<div class="col-7 col-md-8 col-sm-12">
+									<p class="fz120 md-fz110 d-ib bb-black pb5">ルドルフ・フィドラー GOF パピーセット</p>
+									<div class="d-f sm-d-b mt40 sm-mt25">
+										<ul class="li-dots">
+											<li>本体</li>
+											<li>ケース</li>
+											<li>弓(ATサルド/11V)</li>
+										</ul>
+										<ul class="li-dots ml50 md-ml30 sm-ml0">
+											<li>松脂</li>
+											<li>クロス</li>
+										</ul>
+									</div>
+									<p class="mt20 c-red">定価　¥107,800</p>
+									<div class="d-f sm-d-b mt30">
+										<section>
+											<h4>[ 本体の仕様 ]</h4>
+											<table class="tbl-simple">
+												<tr>
+													<th>表板</th>
+													<td>：ヨーロピアンスブルース</td>
+												</tr>
+												<tr>
+													<th>横、裏板</th>
+													<td>：ヨーロピアンメイプル</td>
+												</tr>
+												<tr>
+													<th>指板</th>
+													<td>：黒檀</td>
+												</tr>
+												<tr>
+													<th>弦</th>
+													<td>：トマステーク社ドミナント</td>
+												</tr>
+												<tr>
+													<th>サイズ</th>
+													<td>：4/4</td>
+												</tr>
+											</table>
+										</section>
+										<section class="ml50 md-ml30 sm-ml0 sm-mt20">
+											<h4>[ 弓の仕様 ]</h4>
+											<table class="tbl-simple">
+												<tr>
+													<th>材質</th>
+													<td>：高級ブラジルウッド</td>
+												</tr>
+												<tr>
+													<th>フロッグ</th>
+													<td>：黒檀、シングルアイ</td>
+												</tr>
+												<tr>
+													<th>ラッピング</th>
+													<td>：銀線</td>
+												</tr>
+											</table>
+										</section>
+									</div>
+								</div>
+								<figure class="col-5 col-md-4 col-sm-8 ta-c sm-mt30"><img src="../img/violin/sec4-img2.jpg" width="273" height="205" class="img-rspsv" alt="バイオリン"></figure>
+							</div>
+							<p class="mt30">体験レッスン当日にご入会いただいた方は<span class="c-red">¥52,000(入会金¥17,800)</span>で差し上げます！</p>
+						</div>
+					</section>
+					<section class="mt50 sm-mt40 view view-slideup">
+						<h3 class="ribbon-blue -lightgray">ビオラセット</h3>
+						<div class="mt30 bgc-white p50 md-p30 bdrs15">
+							<div class="cols nega gutter-50 gutter-md-30 ai-c jc-c">
+								<div class="col-7 col-sm-12">
+									<p class="fz120 md-fz110 d-ib bb-black pb5">KIKUTANI MUSIC SVA-240 パピーセット</p>
+									<div class="d-f sm-d-b mt40 sm-mt25">
+										<ul class="li-dots">
+											<li>本体</li>
+											<li>ソフトケース</li>
+										</ul>
+										<ul class="li-dots ml50 md-ml30 sm-ml0">
+											<li>弓</li>
+											<li>松脂</li>
+										</ul>
+									</div>
+								</div>
+								<figure class="col-5 col-sm-8 ta-c sm-mt30"><img src="../img/violin/sec4-img3.jpg" width="206" height="175" class="img-rspsv" alt="アコースティックギター"></figure>
+							</div>
+							<p class="mt30">体験レッスン当日にご入会いただいた方は<span class="c-red">¥8,000(入会金¥17,800)</span>で差し上げます！</p>
+						</div>
+					</section>
+				</div>
+			</div>
+		</section>
+
+		<!-- #sec5 -->
+		<section id="sec5" class="course-link pb40 bgc-gray sm-plr20">
 			<div class="cols gutter-20 gutter-sm-10">
 				<div class="col-12 mt-20">
-					<h3 class="ribbon-black -lightgray">バンド系コース</h3>
+					<h3 class="ribbon-black -gray">クラシック系・弦楽器コース</h3>
 				</div>
 				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
-					<a href="/vocal" class="hov course1"><span>vocal</span>ボーカル</a>
+					<a href="/piano" class="hov course7"><span>piano</span>ピアノ</a>
 				</div>
 				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
-					<a href="/guitar" class="hov course2"><span>guitar</span>ギター</a>
+					<a href="/violin" class="hov course8"><span>violin / viola</span>バイオリン・ビオラ</a>
 				</div>
 				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/bass" class="hov course3"><span>bass</span>ベース</a>
+					<a href="/cello" class="hov course9"><span>cello</span>チェロ</a>
 				</div>
 				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/drums" class="hov course4"><span>drums</span>ドラム</a>
+					<a href="/ukulele" class="hov course10"><span>ukulele</span>ウクレレ</a>
 				</div>
 				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/keyboard" class="hov course5"><span>keyboard</span>ベース</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/dtm" class="hov course6"><span>DTM</span>デスクトップミュージック</a>
+					<a href="/singing" class="hov course11"><span>singing</span>声楽</a>
 				</div>
 			</div>
 		</section>
