--- a/html/14_ululele.html
+++ b/html/14_ululele.html
@@ -32,7 +32,7 @@
 </head>
 </head>
 
-<body id="ululele" class="uf">
+<body id="ukulele" class="uf">
 
 
 <!-- header -->
@@ -109,37 +109,130 @@
 		</section>
 					
 		<!-- #sec2 -->
+		<section id="sec2" class="bgc-lightgray bg-nami mt150 sm-mt100 pb100 sm-pb50 mb130 md-mb100 sm-mb80">
+			<div class="cols gutter-30 gutter-sm-40">
+				<div class="col-12 ta-c view view-slideup">
+					<div class="mt-70 md-mt-60 sm-mt-50 d-ib">
+						<p class="ff-en fz300 sm-fz240 lh180">cource</p>
+						<h2>コース一覧</h2>
+						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+					</div>
+				</div>
+				<section class="col-6 col-sm-12 mt50 view view-slideup">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">スタンダードコース</h3>
+						<p class="mt30">初めての方でもわかりやすく楽器を知る事からスタートします。チューニング、弦の張り方・構え方、フィンガー・トレーニング等を行います。好きな曲を課題曲にしながら、右手人差し指によるストローク奏法を用い、楽しく上達しましょう。</p>
+					</div>
+				</section>
+				<section class="col-6 col-sm-12 mt50 sm-mt30 view view-slideup">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">ソロウクレレコース</h3>
+						<p class="mt30">高度なコードを学び、カッティングで歯切れの良いストローク等を学んでいきます。タブ譜やスケールにも触れ、単音弾きとコード弾きをミックスさせたソロ演奏のテクニックを身につけていきましょう。
+						</p>
+					</div>
+				</section>
+			</div>
+		</section>
 		
-
 		<!-- #sec3 -->
-		
-
-		<!-- #sec4 -->
-		<section id="sec4" class="course-link pb40 bgc-lightgray sm-plr20">
-			<div class="cols gutter-20 gutter-sm-10">
-				<div class="col-12 mt-20">
-					<h3 class="ribbon-black -lightgray">バンド系コース</h3>
+		<section id="sec3" class="mt200 md-mt150 sm-mt50 mb100 sm-b70">
+			<div class="cols gutter-70 gutter-md-40">
+				<div class="col-8">
+					<div class="d-f sm-d-b ai-fe">
+						<p class="ff-en fz270 lh100">lesson</p>
+						<h2 class="pl30 sm-pl0 fz120 sm-fz100">レッスン内容例</h2>
+					</div>
+					<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
 				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
-					<a href="/vocal" class="hov course1"><span>vocal</span>ボーカル</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
-					<a href="/guitar" class="hov course2"><span>guitar</span>ギター</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/bass" class="hov course3"><span>bass</span>ベース</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/drums" class="hov course4"><span>drums</span>ドラム</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/keyboard" class="hov course5"><span>keyboard</span>ベース</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/dtm" class="hov course6"><span>DTM</span>デスクトップミュージック</a>
+			</div>
+			<div class="cols gutter-70 gutter-md-40">
+				<section class="col-10 col-sm-12 mt50 sm-mt-20 z1 ord1 sm-ord2">
+					<div class="bg-dots bd-blue ptb60 pl80 pr60 sm-ptb40 sm-pl30 sm-pr30 bdrs15">						
+						<section>
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 01</h4>
+							<p class="mt25">まずは楽器の構造や調弦、弦の張り方・構え方について学びます。基本コードを覚えて、フィンガー・トレーニングをしながら様々なリズムをストロークで演奏して、歌やメロディー楽器の伴奏が出来るようにします。</p>
+						</section>
+						<section class="mt30">
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 02</h4>
+							<p class="mt25">ハイポジションでのコードも覚え、同じコードでも使い分けられるようにします。カッティングで歯切れの良い8ビート・ストローク、4ビート・ストローク、ロールストローク、スロー・ワルツ、スパニッシュ等、少し複雑なリズム、ストロークを学習し、演奏力を習得します。</p>
+						</section>
+						<section class="mt30">
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 03</h4>
+							<p class="mt25">様々なコードによるソロトレーニング、テンションコード、コードプログレッションメロディーを弾きながら、伴奏のコードも一緒に弾けるように練習します。自由にアレンジしながら数多くの曲を学び、個性を確立しウクレレならではの音色を追求します。</p>
+						</section>
+					</div>
+				</section>
+				<div class="col-5 col-sm-6 return-3 return-sm-0 sm-mr20 mt-150 md-mt-100 sm-mt-60 z2 ord2 sm-ord1">
+					<figure><img src="../img/ululele/sec3-img1.jpg" width="314" height="290" class="img-rspsv-full" alt="レッスン内容例"></figure>
 				</div>
 			</div>
 		</section>
+		
+		<!-- #sec4 -->
+		<section id="sec4" class="bgc-lightgray bg-nami pt70 sm-pt50 pb70 mb100 md-mb80 sm-mb60">
+			<div class="cols gutter-40">
+				<div class="col-12 view view-slideup">
+					<div class="d-ib">
+						<div class="d-f sm-d-b ai-c">
+							<p class="ff-en fz270 lh180">present</p>
+							<h2 class="ml30 sm-ml0">入会特典 / 楽器プレゼント</h2>
+						</div>
+						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+					</div>
+					<section class="mt50 sm-mt40 view view-slideup">
+						<h3 class="ribbon-blue -lightgray">ウクレレセット</h3>
+						<div class="mt30 bgc-white p50 md-p30 bdrs15">
+							<div class="cols nega gutter-50 gutter-md-30 ai-c jc-c">
+								<div class="col-7 col-md-8 col-sm-12">
+									<p class="fz120 md-fz110 d-ib bb-black pb5 sm-d-n">KIKUTANI MUSIC ウクレレ</p><br>
+									<p class="fz120 md-fz110 d-ib bb-black pb5 mt10">チューナスタンダードセット</p>
+									<div class="d-f sm-d-b mt40 sm-mt25">
+										<ul class="li-dots">
+											<li>本体</li>
+											<li>ソフトケース</li>
+											<li>クリップチューナー</li>
+										</ul>
+										<ul class="li-dots ml50 md-ml30 sm-ml0">
+											<li>ウクレレスタンド</li>
+											<li>パピーバッグ</li>
+											<li>スタジオ利用券7,000円分</li>
+										</ul>
+									</div>
+									<p class="mt20">コルドバのソプラノウクレレ、コンサートウクレレ。マホガニーならではの芯のあるサウンドです。ケースは厚みがあって軽量、持ち運びもラクチン、安心なギグバックが付属します。</p>
+								</div>
+								<figure class="col-5 col-md-4 col-sm-8 ta-c sm-mt30"><img src="../img/ululele/sec4-img1.jpg" width="221" height="285" class="img-rspsv" alt="ウクレレ"></figure>
+							</div>
+							<p class="mt30">体験レッスン当日にご入会いただいた方は入会金のみ<span class="c-red">(¥17,800)</span>で差し上げます！</p>
+						</div>
+					</section>
+				</div>
+			</div>
+		</section>
+
+		<!-- #sec5 -->
+		<section id="sec5" class="course-link pb40 bgc-gray sm-plr20">
+			<div class="cols gutter-20 gutter-sm-10">
+				<div class="col-12 mt-20">
+					<h3 class="ribbon-black -gray">クラシック系・弦楽器コース</h3>
+				</div>
+				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
+					<a href="/piano" class="hov course7"><span>piano</span>ピアノ</a>
+				</div>
+				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
+					<a href="/violin" class="hov course8"><span>violin / viola</span>バイオリン・ビオラ</a>
+				</div>
+				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
+					<a href="/cello" class="hov course9"><span>cello</span>チェロ</a>
+				</div>
+				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
+					<a href="/ukulele" class="hov course10"><span>ukulele</span>ウクレレ</a>
+				</div>
+				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
+					<a href="/singing" class="hov course11"><span>singing</span>声楽</a>
+				</div>
+			</div>
+		</section>
+
 
 	</section>
 </main>
