--- a/html/16_flute.html
+++ b/html/16_flute.html
@@ -94,49 +94,229 @@
 		<section id="sec1" class="mt120 sm-mt70">
 			<div class="ptb20 sm-ptb30 cols-wide bg-dots">
 				<div class="cols jc-c ai-c gutter-70 gutter-md-40">
-					<div class="col-6 col-sm-10 sm-mt40 ord1 sm-ord2">
-						<figure><img src="../img/flute/sec1-img1.png" width="455" height="448" class="img-rspsv" alt="フルート"></figure>
-					</div>
-					<div class="col-6 col-sm-12 ord2 sm-ord1">
+					<div class="col-6 col-sm-12">
 						<div class="ttl">
 							<p class="ff-en fz350 lh180">Flute</p>
 							<h2>フルート</h2>
 						</div>
 						<p class="mt30">綺麗な音色と手軽さから人気のフルート。しかし初めての人はなかなか良い音が出ません。勘に頼るのではなく正しい指導の下に練習をしなければ上達するのは難しいでしょう。まずは姿勢を正すところから先生と一緒に始めましょう。</p>
 					</div>
+					<div class="col-6 col-sm-10 sm-mt40">
+						<figure><img src="../img/flute/sec1-img1.png" width="455" height="448" class="img-rspsv" alt="フルート"></figure>
+					</div>
 				</div>
 			</div>
 		</section>
 					
 		<!-- #sec2 -->
+		<section id="sec2" class="bgc-lightgray bg-nami mt150 sm-mt100 pb100 sm-pb50 mb130 md-mb100 sm-mb80">
+			<div class="cols gutter-30 gutter-sm-40">
+				<div class="col-12 ta-c view view-slideup">
+					<div class="mt-70 md-mt-60 sm-mt-50 d-ib">
+						<p class="ff-en fz300 sm-fz240 lh180">cource</p>
+						<h2>コース一覧</h2>
+						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+					</div>
+				</div>
+				<section class="col-6 col-sm-12 mt50 view view-slideup">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">クラシックフルートコース</h3>
+						<p class="mt30">フルートはリードを使わず人の息だけで鳴るのが特徴で、急速なパッセージにも繊細な音色で応えてくれます。まずは、基礎から少しずつ学びながらクラシックの名曲を楽しくマスターしましょう。</p>
+					</div>
+				</section>
+				<section class="col-6 col-sm-12 mt50 sm-mt30 view view-slideup">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">ポピュラーフルートコース</h3>
+						<p class="mt30">フルートを楽しむ上で必要な演奏力を段階的にバランスよく習得していきます。 クラシックからポピュラー音楽までの幅広いジャンルから選曲されたレパートリーを、ソロやアンサンブルで楽しみながら経験していきましょう。</p>
+					</div>
+				</section>
+			</div>
+		</section>
 		
-
 		<!-- #sec3 -->
-		
+		<section id="sec3" class="mtb100 sm-mtb70">
+			<div class="cols gutter-70 gutter-md-40 jc-fe sm-jc-fs">
+				<div class="col-8">
+					<div class="d-f sm-d-b ai-fe">
+						<p class="ff-en fz270 lh100">lesson</p>
+						<h2 class="pl30 sm-pl0 fz120 sm-fz100">レッスン内容例</h2>
+					</div>
+					<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+				</div>
+			</div>
+			<div class="cols gutter-70 gutter-md-40 jc-fe">
+				<div class="col-4 col-sm-6 sm-mr20 mt-80 sm-mt-80 z2">
+					<figure><img src="../img/flute/sec3-img1.jpg" width="314" height="290" class="img-rspsv" alt="レッスン内容例"></figure>
+				</div>
+				<div class="col-9 col-sm-12 return-1 return-sm-0 mt50 sm-mt-20 z1">
+					<div class="bg-dots bd-blue ptb60 pl80 pr60 sm-ptb40 sm-pl30 sm-pr30 bdrs15">
+						<section>
+							<h3 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 01</h3>
+							<p class="mt25">発音しやすい音や動かしやすい指使いの音から始め、曲を使いながらタンギング、スラー等を学びしっかりした音が出せることを目指します。 リズムや強弱、アーティキュレーションについても段階的に導入し豊かな表現力を身につけます。</p>
+						</section>
+						<section class="mt30">
+							<h3 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 02</h3>
+							<p class="mt25">全音域の音階の習得と正しい指使いでブリチアルディ・キー、スタッカート、マイナースケール等を学び 、レパートリーを増やしながら基礎を仕上げていきます。 ポピュラー音楽の代表的なリズムスタイルや特有のフレーズを体験することにより、ハーモニー感覚も学べます。</p>
+						</section>
+						<section class="mt30">
+							<h3 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 03</h3>
+							<p class="mt25">身に付けた技術を応用し、より難易度の高いレパートリー曲にも挑戦。フルートならではの表現力を高めます。クロマチック・スケール、テヌートとアクセント、ダイナミクス等、様々な技術を使ってソロやアンサンブルで楽しみながら演奏できるようにクラシックからポピュラーまで幅広いジャンルから表現していきます。</p>
+						</section>
+					</div>
+				</div>
+			</div>
+		</section>
 
 		<!-- #sec4 -->
-		<section id="sec4" class="course-link pb40 bgc-lightgray sm-plr20">
+		<section id="sec4" class="bgc-lightgray bg-nami pt70 sm-pt50 pb70 mb100 md-mb80 sm-mb60">
+			<div class="cols gutter-40">
+				<div class="col-12 view view-slideup">
+					<div class="d-ib">
+						<div class="d-f sm-d-b ai-c">
+							<p class="ff-en fz270 lh180">present</p>
+							<h2 class="ml30 sm-ml0">入会特典 / 楽器プレゼント</h2>
+						</div>
+						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+						<p class="mt40">すべての楽器にパピーバッグ、スタジオ利用券7,000円分付き！</p>
+					</div>
+					<section class="mt50 sm-mt40 view view-slideup">
+						<h3 class="ribbon-blue -lightgray">フルートセット</h3>
+						<div class="mt30 bgc-white p50 md-p30 bdrs15">
+							<div class="cols nega gutter-50 gutter-md-30 ai-c jc-c">
+								<div class="col-7 col-sm-12">
+									<p class="fz120 md-fz110 d-ib bb-black pb5">J.Michael FL-300S パピーセット</p>
+									<div class="d-f sm-d-b mt40 sm-mt25">
+										<ul class="li-dots">
+											<li>フルート本体</li>
+											<li>Cペーパー</li>
+										</ul>
+										<ul class="li-dots ml50 md-ml30 sm-ml0">
+											<li>セミハードケース</li>
+											<li>付属品</li>
+										</ul>
+									</div>
+									<p class="mt20 c-red">定価　¥38,500</p>
+									<table class="tbl-simple mt30">
+										<tr>
+											<th>調子</th>
+											<td>：C</td>
+										</tr>
+										<tr>
+											<th>システム</th>
+											<td>：オフセットカバードキィ</td>
+										</tr>
+										<tr>
+											<th>管体・キィ</th>
+											<td>：洋白製</td>
+										</tr>
+										<tr>
+											<th>仕上げ</th>
+											<td>：銀メッキ Eメカニズム付き</td>
+										</tr>
+									</table>
+								</div>
+								<figure class="col-5 col-sm-9 ta-c sm-mt30"><img src="../img/flute/sec4-img1.jpg" width="421" height="96" class="img-rspsv" alt="フルート"></figure>
+							</div>
+							<p class="mt30">体験レッスン当日にご入会いただいた方は<span class="c-red">¥5,000(入会金¥17,800)</span>で差し上げます！</p>
+						</div>
+						<div class="mt30 bgc-white p50 md-p30 bdrs15">
+							<div class="cols nega gutter-50 gutter-md-30 ai-c jc-c">
+								<div class="col-7 col-sm-12">
+									<p class="fz120 md-fz110 d-ib bb-black pb5">JUPITER JFL-700E パピーセット</p>
+									<div class="d-f sm-d-b mt40 sm-mt25">
+										<ul class="li-dots">
+											<li>フルート本体</li>
+											<li>クリーニングロッド</li>
+										</ul>
+										<ul class="li-dots ml50 md-ml30 sm-ml0">
+											<li>クロス</li>
+											<li>ケース</li>
+										</ul>
+									</div>
+									<p class="mt20 c-red">定価　¥71,500</p>
+									<table class="tbl-simple mt30">
+										<tr>
+											<th>調子</th>
+											<td>：C</td>
+										</tr>
+										<tr>
+											<th>管体・キィ</th>
+											<td>：ニッケルシルバー</td>
+										</tr>
+										<tr>
+											<th>針バネ</th>
+											<td>：ステンレススティール</td>
+										</tr>
+										<tr>
+											<th>仕上げ</th>
+											<td>：銀メッキ Eメカニズム付き</td>
+										</tr>
+									</table>
+								</div>
+								<figure class="col-5 col-sm-9 ta-c sm-mt30"><img src="../img/flute/sec4-img2.jpg" width="405" height="88" class="img-rspsv" alt="フルート"></figure>
+							</div>
+							<p class="mt30">体験レッスン当日にご入会いただいた方は<span class="c-red">¥30,000(入会金¥17,800)</span>で差し上げます！</p>
+						</div>
+						<div class="mt30 bgc-white p50 md-p30 bdrs15">
+							<div class="cols nega gutter-50 gutter-md-30 ai-c jc-c">
+								<div class="col-7 col-sm-12">
+									<p class="fz120 md-fz110 d-ib bb-black pb5">JUPITER JFL-700UD<span class="fz70">(キッズ用)</span> パピーセット</p>
+									<div class="d-f sm-d-b mt40 sm-mt25">
+										<ul class="li-dots">
+											<li>フルート本体</li>
+											<li>クリーニングロッド</li>
+										</ul>
+										<ul class="li-dots ml50 md-ml30 sm-ml0">
+											<li>クロス</li>
+											<li>ケース</li>
+										</ul>
+									</div>
+									<p class="mt20 c-red">定価　¥85,800</p>
+									<table class="tbl-simple mt30">
+										<tr>
+											<th>調子</th>
+											<td>：C</td>
+										</tr>
+										<tr>
+											<th>管体・キィ</th>
+											<td>：ニッケルシルバー</td>
+										</tr>
+										<tr>
+											<th>針バネ</th>
+											<td>：ステンレススティール</td>
+										</tr>
+										<tr>
+											<th>仕上げ</th>
+											<td>：銀メッキ Eメカニズム付き</td>
+										</tr>
+									</table>
+								</div>
+								<figure class="col-5 col-sm-9 ta-c sm-mt30"><img src="../img/flute/sec4-img3.jpg" width="276" height="49" class="img-rspsv" alt="フルート"></figure>
+							</div>
+							<p class="mt30">体験レッスン当日にご入会いただいた方は<span class="c-red">¥39,000(入会金¥17,800)</span>で差し上げます！</p>
+						</div>
+					</section>
+				</div>
+			</div>
+		</section>
+
+		<!-- #sec5 -->
+		<section id="sec5" class="course-link pb40 bgc-gray sm-plr20">
 			<div class="cols gutter-20 gutter-sm-10">
 				<div class="col-12 mt-20">
-					<h3 class="ribbon-black -lightgray">バンド系コース</h3>
+					<h3 class="ribbon-black -gray">管楽器・打楽器系コース</h3>
 				</div>
 				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
-					<a href="/vocal" class="hov course1"><span>vocal</span>ボーカル</a>
+					<a href="/flute" class="hov course12"><span>flute</span>フルート</a>
 				</div>
 				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
-					<a href="/guitar" class="hov course2"><span>guitar</span>ギター</a>
+					<a href="/saxophone" class="hov course13"><span>saxophone</span>サックス</a>
 				</div>
 				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/bass" class="hov course3"><span>bass</span>ベース</a>
+					<a href="/trumpet" class="hov course14"><span>trumpet / trombone</span>トランペット・トロンボーン</a>
 				</div>
 				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/drums" class="hov course4"><span>drums</span>ドラム</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/keyboard" class="hov course5"><span>keyboard</span>ベース</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/dtm" class="hov course6"><span>DTM</span>デスクトップミュージック</a>
+					<a href="/clarinet" class="hov course15"><span>clarinet</span>クラリネット</a>
 				</div>
 			</div>
 		</section>
