--- a/html/17_saxophone.html
+++ b/html/17_saxophone.html
@@ -94,50 +94,205 @@
 		<section id="sec1" class="mt120 sm-mt70">
 			<div class="ptb20 sm-ptb30 cols-wide bg-dots">
 				<div class="cols jc-c ai-c gutter-70 gutter-md-40">
-					<div class="col-6 col-sm-12">
+					<div class="col-6 col-sm-10 sm-mt40 ord1 sm-ord2">
+						<figure><img src="../img/saxophone/sec1-img1.png" width="446" height="437" class="img-rspsv" alt="チェロ"></figure>
+					</div>
+					<div class="col-6 col-sm-12 ord2 sm-ord1">
 						<div class="ttl">
 							<p class="ff-en fz350 lh180">Saxophone</p>
 							<h2>サックス</h2>
 						</div>
 						<p class="mt30">持っているだけでかっこいいサックス。 ポップスやジャズなど、様々なジャンルに対応し幅広く親しまれています。高価な楽器ですがパピーミュージックスクールではレンタルも行えるので気軽に体験できます。ソプラノ・アルト・テナー・バリトンすべての種類を学べます。</p>
 					</div>
-					<div class="col-6 col-sm-10 sm-mt40">
-						<figure><img src="../img/saxophone/sec1-img1.png" width="446" height="437" class="img-rspsv" alt="チェロ"></figure>
-					</div>
 				</div>
 			</div>
 		</section>
 					
 		<!-- #sec2 -->
-
+		<section id="sec2" class="bgc-lightgray bg-nami mt150 sm-mt100 pb100 sm-pb50 mb130 md-mb100 sm-mb80">
+			<div class="cols gutter-30 gutter-sm-40">
+				<div class="col-12 ta-c view view-slideup">
+					<div class="mt-70 md-mt-60 sm-mt-50 d-ib">
+						<p class="ff-en fz300 sm-fz240 lh180">cource</p>
+						<h2>コース一覧</h2>
+						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+					</div>
+				</div>
+				<section class="col-6 col-sm-12 mt50 view view-slideup">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">クラシックサックスコース</h3>
+						<p class="mt30">息の入れ方ひとつで音の高低、大小、ニュアンスの変わるサックス。人間の声に一番近い楽器と言われ、最近では若い女性の愛好者も増えています。無理の無い進め方により、自然と指使いやリズムをマスターできます。楽器との一体感、音との一体感をあなたも味わってみましょう。</p>
+					</div>
+				</section>
+				<section class="col-6 col-sm-12 mt50 sm-mt30 view view-slideup">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">ポピュラーサックスコース</h3>
+						<p class="mt30">サックスを楽しむための基礎的演奏力を、無理のないゆるやかな進度で学び、ポピュラー音楽を演奏してみましょう。なめらかなメロディーが吹けて遠くまで音が通るサックス。ポピュラー音楽を中心に幅広いジャンルの音楽を自由に表現しましょう。</p>
+					</div>
+				</section>
+				<section class="col-6 col-sm-12 mt30 view view-slideup">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">ジャズサックスコース</h3>
+						<p class="mt30">ロングトーンやスケールなどの基礎練習からアドリブなどの実践的な内容まで幅広く指導。ポップスやジャズなど、いろいろなジャンルに対応します。「とりあ えず音は出せる」レベルまで練習されている方には特にオススメ。そこから先は自己流ではなく、しっかりとした理論と共に学ぶのが上達への近道です。譜面にとらわれないアドリブ演奏を学ぶことで、サックスの新たな可能性を発見しましょう。</p>
+					</div>
+				</section>
+			</div>
+		</section>
+		
 		<!-- #sec3 -->
-
-		<!-- #sec4 -->
-		<section id="sec4" class="course-link pb40 bgc-lightgray sm-plr20">
-			<div class="cols gutter-20 gutter-sm-10">
-				<div class="col-12 mt-20">
-					<h3 class="ribbon-black -lightgray">バンド系コース</h3>
+		<section id="sec3" class="mt200 md-mt150 sm-mt50 mb100 sm-b70">
+			<div class="cols gutter-70 gutter-md-40">
+				<div class="col-8">
+					<div class="d-f sm-d-b ai-fe">
+						<p class="ff-en fz270 lh100">lesson</p>
+						<h2 class="pl30 sm-pl0 fz120 sm-fz100">レッスン内容例</h2>
+					</div>
+					<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
 				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
-					<a href="/vocal" class="hov course1"><span>vocal</span>ボーカル</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
-					<a href="/guitar" class="hov course2"><span>guitar</span>ギター</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/bass" class="hov course3"><span>bass</span>ベース</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/drums" class="hov course4"><span>drums</span>ドラム</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/keyboard" class="hov course5"><span>keyboard</span>ベース</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/dtm" class="hov course6"><span>DTM</span>デスクトップミュージック</a>
+			</div>
+			<div class="cols gutter-70 gutter-md-40">
+				<section class="col-10 col-sm-12 mt50 sm-mt-20 z1 ord1 sm-ord2">
+					<div class="bg-dots bd-blue ptb60 pl80 pr60 sm-ptb40 sm-pl30 sm-pr30 bdrs15">						
+						<section>
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 01</h4>
+							<p class="mt25">まず楽器の構え方・呼吸法など演奏に必要な基礎を習得していきます。タンギング、スラー、1オクターブの音域、メジャー・スケール等を段階的に学びながら楽しく、無理なく、上達していきます。</p>
+						</section>
+						<section class="mt30">
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 02</h4>
+							<p class="mt25">ジャズ・ポピュラー音楽特有のフレーズも導入し、全音域の指運びを習得します。スラー、アクセント、2オクターブの音域、マイナースケール等、様々な表現方法を身に付け曲の演奏を楽しみます。</p>
+						</section>
+						<section class="mt30">
+							<h4 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 03</h4>
+							<p class="mt25">さらに高度な音楽的表現力を目指しダイナミクス、8ビート、スウィング、ジャズのアーティキュレーション等を習得していきます。 リズム・カリキュラムにより体系的にリズムを理解するとともに、コードやスケールなどのポピュラー音楽理論も身につけていきます。</p>
+						</section>
+					</div>
+				</section>
+				<div class="col-5 col-sm-6 return-3 return-sm-0 sm-mr20 mt-150 md-mt-100 sm-mt-60 z2 ord2 sm-ord1">
+					<figure><img src="../img/saxophone/sec3-img1.jpg" width="314" height="290" class="img-rspsv-full" alt="レッスン内容例"></figure>
 				</div>
 			</div>
 		</section>
+		
+		<!-- #sec4 -->
+		<section id="sec4" class="bgc-lightgray bg-nami pt70 sm-pt50 pb70 mb100 md-mb80 sm-mb60">
+			<div class="cols gutter-40">
+				<div class="col-12 view view-slideup">
+					<div class="d-ib">
+						<div class="d-f sm-d-b ai-c">
+							<p class="ff-en fz270 lh180">present</p>
+							<h2 class="ml30 sm-ml0">入会特典 / 楽器プレゼント</h2>
+						</div>
+						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+						<p class="mt40">すべての楽器にパピーバッグ、スタジオ利用券7,000円分付き！</p>
+					</div>
+					<section class="mt50 sm-mt40 view view-slideup">
+						<h3 class="ribbon-blue -lightgray">サックスセット</h3>
+						<div class="mt30 bgc-white p50 md-p30 bdrs15">
+							<div class="cols nega gutter-50 gutter-md-30 ai-c jc-c">
+								<div class="col-7 col-sm-12">
+									<p class="fz120 md-fz110 d-ib bb-black pb5">J.Michael AL-500 パピーセット</p>
+									<div class="d-f sm-d-b mt40 sm-mt25">
+										<ul class="li-dots">
+											<li>フルート本体</li>
+											<li>セミハードケース</li>
+											<li>付属品</li>
+										</ul>
+										<ul class="li-dots ml50 md-ml30 sm-ml0">
+											<li>スワブ</li>
+											<li>Cペーパー</li>
+										</ul>
+									</div>
+									<p class="mt20 c-red">定価　¥68,200</p>
+									<table class="tbl-simple mt30">
+										<tr>
+											<th>調子</th>
+											<td>：E♭</td>
+										</tr>
+										<tr>
+											<th>管体・キィ</th>
+											<td>：ラッカー仕上げ</td>
+										</tr>
+										<tr>
+											<th>付属キィ</th>
+											<td>：HighF♯、フロントFキィ付き</td>
+										</tr>
+									</table>
+								</div>
+								<figure class="col-5 ta-c sm-mt30"><img src="../img/saxophone/sec4-img1.jpg" width="143" height="242" class="img-rspsv" alt="サックス"></figure>
+							</div>
+							<p class="mt30">体験レッスン当日にご入会いただいた方は<span class="c-red">¥21,000(入会金¥17,800)</span>で差し上げます！</p>
+						</div>
+						<div class="mt30 bgc-white p50 md-p30 bdrs15">
+							<div class="cols nega gutter-50 gutter-md-30 ai-c jc-c">
+								<div class="col-7 col-sm-12">
+									<p class="fz120 md-fz110 d-ib bb-black pb5">JUPITER JAS500 パピーセット</p>
+									<ul class="li-dots mt40 sm-mt25">
+										<li>本体</li>
+										<li>オリジナルハードケース</li>
+										<li>付属品</li>
+									</ul>
+									<p class="mt20 c-red">定価　¥145,200</p>
+									<div class="d-f sm-d-b mt30">
+										<table class="tbl-simple">
+											<tr>
+												<th>調子</th>
+												<td>：E♭調</td>
+											</tr>
+											<tr>
+												<th>素材</th>
+												<td>：イエローブラス</td>
+											</tr>
+											<tr>
+												<th>仕上げ</th>
+												<td>：ゴールドラッカー仕上げ</td>
+											</tr>
+										</table>
+										<table class="tbl-simple ml50 md-ml30 sm-ml0">
+											<tr>
+												<th>板バネ材質</th>
+												<td>：硬質鋼</td>
+											</tr>
+											<tr>
+												<th>指掛け</th>
+												<td>：左右調整可能指掛け</td>
+											</tr>
+											<tr>
+												<th>指貝材質</th>
+												<td>：ポリエステル/4</td>
+											</tr>
+										</table>
+									</div>
+								</div>
+								<figure class="col-5 ta-c sm-mt30"><img src="../img/saxophone/sec4-img2.jpg" width="163" height="245" class="img-rspsv" alt="サックス"></figure>
+							</div>
+							<p class="mt30">体験レッスン当日にご入会いただいた方は<span class="c-red">¥75,000(入会金¥17,800)</span>で差し上げます！</p>
+						</div>
+					</section>
+				</div>
+			</div>
+		</section>
+
+		<!-- #sec5 -->
+		<section id="sec5" class="course-link pb40 bgc-gray sm-plr20">
+			<div class="cols gutter-20 gutter-sm-10">
+				<div class="col-12 mt-20">
+					<h3 class="ribbon-black -gray">管楽器・打楽器系コース</h3>
+				</div>
+				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
+					<a href="/flute" class="hov course12"><span>flute</span>フルート</a>
+				</div>
+				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
+					<a href="/saxophone" class="hov course13"><span>saxophone</span>サックス</a>
+				</div>
+				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
+					<a href="/trumpet" class="hov course14"><span>trumpet / trombone</span>トランペット・トロンボーン</a>
+				</div>
+				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
+					<a href="/clarinet" class="hov course15"><span>clarinet</span>クラリネット</a>
+				</div>
+			</div>
+		</section>
+
 
 	</section>
 </main>
