--- a/html/18_trumpet.html
+++ b/html/18_trumpet.html
@@ -89,54 +89,301 @@
 			<div class="ptb200 md-ptb160 sm-ptb100" style="background: url('../img/flute/hero.jpg') no-repeat center / cover ;">
 			</div>		
 		</div>
-
+					
 		<!-- #sec1 -->
 		<section id="sec1" class="mt120 sm-mt70">
 			<div class="ptb20 sm-ptb30 cols-wide bg-dots">
 				<div class="cols jc-c ai-c gutter-70 gutter-md-40">
-					<div class="col-6 col-sm-10 sm-mt40 ord1 sm-ord2">
-						<figure><img src="../img/trumpet/sec1-img1.png" width="455" height="448" class="img-rspsv" alt="トランペット / トロンボーン"></figure>
-					</div>
-					<div class="col-6 col-sm-12 ord2 sm-ord1">
+					<div class="col-6 col-sm-12">
 						<div class="ttl">
-							<p class="ff-en fz270 lh180">Trumpet / Trombone</p>
+							<p class="ff-en fz270 sm-fz240 lh180">Trumpet / Trombone</p>
 							<h2>トランペット / トロンボーン</h2>
 						</div>
 						<p class="mt30">トランペットなどの管楽器は初めての人は音を出すのだけでも一苦労。しかし、一度レッスンに来てみたらアッと言う間に音を出せるようになります。バンドから吹奏楽、憧れのあの曲を演奏したい、などその人のニーズに合わせてレッスンをしていきます。</p>
+					</div>
+					<div class="col-6 col-sm-10 sm-mt40">
+						<figure><img src="../img/trumpet/sec1-img1.png" width="455" height="448" class="img-rspsv" alt="トランペット / トロンボーン"></figure>
 					</div>
 				</div>
 			</div>
 		</section>
 					
 		<!-- #sec2 -->
+		<section id="sec2" class="bgc-lightgray bg-nami mt150 sm-mt100 pb100 sm-pb50 mb130 md-mb100 sm-mb80">
+			<div class="cols gutter-30 gutter-sm-40">
+				<div class="col-12 ta-c view view-slideup">
+					<div class="mt-70 md-mt-60 sm-mt-50 d-ib">
+						<p class="ff-en fz300 sm-fz240 lh180">cource</p>
+						<h2>コース一覧</h2>
+						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+					</div>
+				</div>
+				<section class="col-6 col-sm-12 mt50 view view-slideup">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">クラシックトランペットコース</h3>
+						<p class="mt30">トランペットは他の楽器にはない、華々しく輝かしい高音で私達を魅了します。その音色はあるときは哀愁を漂わせ、あるときはコミカルな表情をかもしだす。どんなシーンでも常に注目を集める存在です。まずは、基礎から少しずつ学びながらクラシックの名曲を楽しく学びましょう。</p>
+					</div>
+				</section>
+				<section class="col-6 col-sm-12 mt50 sm-mt30 view view-slideup">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">ポピュラートランペットコース</h3>
+						<p class="mt30">オーケストラやビッグバンドでスポットライトが当たる機会の多いトランペット。トランペットを楽しむうえで必要な基礎的演奏力を段階的にバランスよく習得し、ポピュラー音楽を中心に幅広いジャンルの音楽を自由に表現しましょう。</p>
+					</div>
+				</section>
+				<section class="col-6 col-sm-12 mt50 view view-slideup">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">クラシックトロンボーンコース</h3>
+						<p class="mt30">古くは教会音楽に不可欠な存在だったトロンボーン。スライドを動かすことで無段階に音の高さを変えることが出来るので、豊かで荘厳な音色から、メロウな雰囲気、象の泣き声のような音まで、幅広く表現できる楽器です。厳選された様々なレパートリー曲を用い、レッスンを楽しみながら学びましょう。</p>
+					</div>
+				</section>
+				<section class="col-6 col-sm-12 mt50 sm-mt30 view view-slideup">
+					<div class="bgc-white p40 md-p30 bdrs15 h-eq">
+						<h3 class="fz130 sm-fz120 d-ib bb-black pb5">ポピュラートロンボーンコース</h3>
+						<p class="mt30">アンサンブルやビッグバンドの中で、重厚な音色がサウンドを渋く引き締めるトロンボーン。クラシックやジャズはもちろん、最近ではスカやボサノヴァなど、ジャンルの垣根を越えて活躍しています。<br class="md-d-n">トロンボーンを楽しむうえで演奏力・知識を無理のないゆるやかな進度でバランスよく学び、初めての方からご経験のある方までどなたでもトロンボーンを楽しみましょう。</p>
+					</div>
+				</section>
+			</div>
+		</section>
 		
-
 		<!-- #sec3 -->
-		
+		<section id="sec3" class="mtb100 sm-mtb70">
+			<div class="cols gutter-70 gutter-md-40 jc-fe sm-jc-fs">
+				<div class="col-8">
+					<div class="d-f sm-d-b ai-fe">
+						<p class="ff-en fz270 lh100">lesson</p>
+						<h2 class="pl30 sm-pl0 fz120 sm-fz100">レッスン内容例<br class="d-n sm-d-b"><span class="fz70">（トランペット）</span></h2>
+					</div>
+					<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+				</div>
+			</div>
+			<div class="cols gutter-70 gutter-md-40 jc-fe">
+				<div class="col-4 col-sm-6 sm-mr20 mt-80 sm-mt-80 z2">
+					<figure><img src="../img/trumpet/sec3-img1.jpg" width="314" height="290" class="img-rspsv" alt="レッスン内容例"></figure>
+				</div>
+				<div class="col-9 col-sm-12 return-1 return-sm-0 mt50 sm-mt-20 z1">
+					<div class="bg-dots bd-blue ptb60 pl80 pr60 sm-ptb40 sm-pl30 sm-pr30 bdrs15">
+						<section>
+							<h3 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 01</h3>
+							<p class="mt25">まずは音の出し方、呼吸法、音楽の基礎知識を学びます。1オクターブの音域、スラー、タンギング、テヌート、メジャー・スケール等、ゆっくり楽しく無理なく上達していきます。</p>
+						</section>
+						<section class="mt30">
+							<h3 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 02</h3>
+							<p class="mt25">正しいタンギングをしっかり身に付け、フィンガー・トレーニングをしながら音階やリズムを学びます。マイナースケール、5度までの音程、ダイナミクス等を身に付け簡単なジャズのアーティキュレーションを学びます。</p>
+						</section>
+						<section class="mt30">
+							<h3 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 03</h3>
+							<p class="mt25">クロマチック・スケール、8ビート、スウィング、3連音符を学びながら音楽の様々なスタイルを経験し、ハーモニーの美しさやアンサンブルなどの表現力を高めます。</p>
+						</section>
+					</div>
+				</div>
+			</div>
+		</section>
 
 		<!-- #sec4 -->
-		<section id="sec4" class="course-link pb40 bgc-lightgray sm-plr20">
+		<section id="sec4" class="bgc-lightgray bg-nami pt70 sm-pt50 pb70 mb100 md-mb80 sm-mb60">
+			<div class="cols gutter-40">
+				<div class="col-12 view view-slideup">
+					<div class="d-ib">
+						<div class="d-f sm-d-b ai-c">
+							<p class="ff-en fz270 lh180">present</p>
+							<h2 class="ml30 sm-ml0">入会特典 / 楽器プレゼント</h2>
+						</div>
+						<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
+						<p class="mt40">すべての楽器にパピーバッグ、スタジオ利用券7,000円分付き！</p>
+					</div>
+					<section class="mt50 sm-mt40 view view-slideup">
+						<h3 class="ribbon-blue -lightgray">トランペットセット</h3>
+						<div class="mt30 bgc-white p50 md-p30 bdrs15">
+							<div class="cols nega gutter-50 gutter-md-30 ai-c jc-c">
+								<div class="col-7 col-sm-12">
+									<p class="fz120 md-fz110 d-ib bb-black pb5">J.Michael TR-200 パピーセット</p>
+									<div class="d-f sm-d-b mt40 sm-mt25">
+										<ul class="li-dots">
+											<li>本体</li>
+											<li>ABSケース</li>
+											<li>マウスピース</li>
+										</ul>
+										<ul class="li-dots ml50 md-ml30 sm-ml0">
+											<li>バルブオイル</li>
+											<li>付属品</li>
+										</ul>
+									</div>
+									<table class="tbl-simple mt30">
+										<tr>
+											<th>調子</th>
+											<td>：B♭</td>
+										</tr>
+										<tr>
+											<th>マウスパイプ</th>
+											<td>：イエローブラス製</td>
+										</tr>
+										<tr>
+											<th>ベル</th>
+											<td>：イエローブラス2枚取り、約125mm</td>
+										</tr>
+										<tr>
+											<th>仕上げ</th>
+											<td>：ラッカー</td>
+										</tr>
+										<tr>
+											<th>ボアサイズ</th>
+											<td>：約11.65mm(ML)</td>
+										</tr>
+										<tr>
+											<th>ピストン</th>
+											<td>：ステンレス製</td>
+										</tr>
+									</table>
+								</div>
+								<figure class="col-5 col-sm-9 ta-c sm-mt30"><img src="../img/trumpet/sec4-img1.jpg" width="273" height="87" class="img-rspsv" alt="トランペット"></figure>
+							</div>
+							<p class="mt30">体験レッスン当日にご入会いただいた方は入会金のみ<span class="c-red">(¥17,800)</span>で差し上げます！</p>
+						</div>
+						<div class="mt30 bgc-white p50 md-p30 bdrs15">
+							<div class="cols nega gutter-50 gutter-md-30 ai-c jc-c">
+								<div class="col-7 col-sm-12">
+									<p class="fz120 md-fz110 d-ib bb-black pb5">JUPITER JTR500 パピーセット</p>
+									<div class="d-f sm-d-b mt40 sm-mt25">
+										<ul class="li-dots">
+											<li>本体</li>
+											<li>ケース</li>
+											<li>マウスピース</li>
+										</ul>
+										<ul class="li-dots ml50 md-ml30 sm-ml0">
+											<li>バルブオイル</li>
+											<li>Cクロス</li>
+										</ul>
+									</div>
+									<p class="mt20 c-red">定価　¥63,800</p>
+									<table class="tbl-simple mt30">
+										<tr>
+											<th>調子</th>
+											<td>：B♭</td>
+										</tr>
+										<tr>
+											<th>ベル</th>
+											<td>：イエローブラス製、約123mm</td>
+										</tr>
+										<tr>
+											<th>仕上げ</th>
+											<td>：クリアラッカー</td>
+										</tr>
+										<tr>
+											<th>ボアサイズ</th>
+											<td>：約11.7mm(ML)</td>
+										</tr>
+										<tr>
+											<th>ピストン</th>
+											<td>：ステンレス製</td>
+										</tr>
+									</table>
+								</div>
+								<figure class="col-5 col-sm-9 ta-c sm-mt30"><img src="../img/trumpet/sec4-img2.jpg" width="263" height="87" class="img-rspsv" alt="トランペット"></figure>
+							</div>
+							<p class="mt30">体験レッスン当日にご入会いただいた方は<span class="c-red">¥25,500(入会金¥17,800)</span>で差し上げます！</p>
+						</div>
+					</section>
+					<section class="mt50 sm-mt40 view view-slideup">
+						<h3 class="ribbon-blue -lightgray">トロンボーンセット</h3>
+						<div class="mt30 bgc-white p50 md-p30 bdrs15">
+							<div class="cols nega gutter-50 gutter-md-30 ai-c jc-c">
+								<div class="col-7 col-sm-12">
+									<p class="fz120 md-fz110 d-ib bb-black pb5">Maxtone TRB-30 パピーセット</p>
+									<div class="d-f sm-d-b mt40 sm-mt25">
+										<ul class="li-dots">
+											<li>本体</li>
+											<li>ハードケース</li>
+											<li>マウスピース</li>
+										</ul>
+										<ul class="li-dots ml50 md-ml30 sm-ml0">
+											<li>クリーニングロッド</li>
+											<li>クロス</li>
+											<li>手袋</li>
+										</ul>
+									</div>
+									<p class="mt20 fz80">8インチベル、調子 = B♭、細管、クリアラッカー仕上げ</p>
+								</div>
+								<figure class="col-5 col-sm-9 ta-c sm-mt30"><img src="../img/trumpet/sec4-img3.jpg" width="329" height="139" class="img-rspsv" alt="トロンボーン"></figure>
+							</div>
+							<p class="mt30">体験レッスン当日にご入会いただいた方は<span class="c-red">¥13,500(入会金¥17,800)</span>で差し上げます！</p>
+						</div>
+						<div class="mt30 bgc-white p50 md-p30 bdrs15">
+							<div class="cols nega gutter-50 gutter-md-30 ai-c jc-c">
+								<div class="col-7 col-sm-12">
+									<p class="fz120 md-fz110 d-ib bb-black pb5">JUPITER JTB700 パピーセット</p>
+									<div class="d-f sm-d-b mt40 sm-mt25">
+										<ul class="li-dots">
+											<li>本体</li>
+											<li>ケース</li>
+											<li>マウスピース</li>
+										</ul>
+										<ul class="li-dots ml50 md-ml30 sm-ml0">
+											<li>スライドオイル</li>
+											<li>Cクロス</li>
+										</ul>
+									</div>
+									<p class="mt20 c-red">定価　¥110,000</p>
+									<div class="d-f sm-d-b mt30">
+										<table class="tbl-simple">
+											<tr>
+												<th>調子</th>
+												<td>：B♭</td>
+											</tr>
+											<tr>
+												<th>ボアサイズ</th>
+												<td>：約12.7mm</td>
+											</tr>
+											<tr>
+												<th>ベルサイズ</th>
+												<td>：約203mm、8インチ</td>
+											</tr>
+											<tr>
+												<th>スライド外管</th>
+												<td>：ニッケルシルバー</td>
+											</tr>
+										</table>
+										<table class="tbl-simple ml50 md-ml30 sm-ml0">
+											<tr>
+												<th>スライド内管</th>
+												<td>：ニッケルシルバー</td>
+											</tr>
+											<tr>
+												<th>マウスピース</th>
+												<td>：細管</td>
+											</tr>
+											<tr>
+												<th>仕上げ</th>
+												<td>：クリアラッカー</td>
+											</tr>
+										</table>
+									</div>
+								</div>
+								<figure class="col-5 col-sm-9 ta-c sm-mt30"><img src="../img/trumpet/sec4-img4.jpg" width="304" height="125" class="img-rspsv" alt="トロンボーン"></figure>
+							</div>
+							<p class="mt30">体験レッスン当日にご入会いただいた方は<span class="c-red">¥53,000(入会金¥17,800)</span>で差し上げます！</p>
+						</div>
+					</section>
+				</div>
+			</div>
+		</section>
+
+		<!-- #sec5 -->
+		<section id="sec5" class="course-link pb40 bgc-gray sm-plr20">
 			<div class="cols gutter-20 gutter-sm-10">
 				<div class="col-12 mt-20">
-					<h3 class="ribbon-black -lightgray">バンド系コース</h3>
+					<h3 class="ribbon-black -gray">管楽器・打楽器系コース</h3>
 				</div>
 				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
-					<a href="/vocal" class="hov course1"><span>vocal</span>ボーカル</a>
+					<a href="/flute" class="hov course12"><span>flute</span>フルート</a>
 				</div>
 				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
-					<a href="/guitar" class="hov course2"><span>guitar</span>ギター</a>
+					<a href="/saxophone" class="hov course13"><span>saxophone</span>サックス</a>
 				</div>
 				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/bass" class="hov course3"><span>bass</span>ベース</a>
+					<a href="/trumpet" class="hov course14"><span>trumpet / trombone</span>トランペット・トロンボーン</a>
 				</div>
 				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/drums" class="hov course4"><span>drums</span>ドラム</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/keyboard" class="hov course5"><span>keyboard</span>ベース</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/dtm" class="hov course6"><span>DTM</span>デスクトップミュージック</a>
+					<a href="/clarinet" class="hov course15"><span>clarinet</span>クラリネット</a>
 				</div>
 			</div>
 		</section>
