--- a/html/20_lyrics.html
+++ b/html/20_lyrics.html
@@ -94,54 +94,56 @@
 		<section id="sec1" class="mt120 sm-mt70">
 			<div class="ptb20 sm-ptb30 cols-wide bg-dots">
 				<div class="cols jc-c ai-c gutter-70 gutter-md-40">
-					<div class="col-6 col-sm-10 sm-mt40 ord1 sm-ord2">
-						<figure><img src="../img/lyrics/sec1-img1.png" width="455" height="448" class="img-rspsv" alt="作詞・作曲 / 音楽理論"></figure>
-					</div>
-					<div class="col-6 col-sm-12 ord2 sm-ord1">
+					<div class="col-6 col-sm-12">
 						<div class="ttl">
-							<p class="ff-en fz270 lh180">Lyrics / Composition</p>
+							<p class="ff-en fz250 md-fz230 lh180">Lyrics / Composition</p>
 							<h2>作詞・作曲 / 音楽理論</h2>
 						</div>
 						<p class="mt30">作詞・作曲は、自分の音楽の世界を表現するために必要なスキルです。基礎を知らずに感覚だけではいい作品はできません。ピアノ、ギター、PC、アプリ,,,。作曲方法は様々。パピーでは幅広い音楽ジャンルに対応しておりますので、あなたの「表現したい」「作りたい」を形にしましょう!</p>
 						<p class="mt15">メロディの作り方、歌詞の書き方、コードやリズム等の音楽理論について丁寧にお教えいたします。何から始めたら良いのか分からない！という方でも安心して受けていただけます。</p>
+					</div>
+					<div class="col-6 col-sm-10 sm-mt40">
+						<figure><img src="../img/lyrics/sec1-img1.png" width="455" height="448" class="img-rspsv" alt="作詞・作曲 / 音楽理論"></figure>
 					</div>
 				</div>
 			</div>
 		</section>
 					
 		<!-- #sec2 -->
-		
-
-		<!-- #sec3 -->
-		
-
-		<!-- #sec4 -->
-		<section id="sec4" class="course-link pb40 bgc-lightgray sm-plr20">
-			<div class="cols gutter-20 gutter-sm-10">
-				<div class="col-12 mt-20">
-					<h3 class="ribbon-black -lightgray">バンド系コース</h3>
+		<section id="sec2" class="bgc-lightgray bg-nami mt150 sm-mt100 ptb100 sm-ptb50 mb130 md-mb100 sm-mb80">
+			<div class="cols gutter-70 gutter-md-40 jc-fe sm-jc-fs">
+				<div class="col-8">
+					<div class="d-f sm-d-b ai-fe">
+						<p class="ff-en fz270 lh100">lesson</p>
+						<h2 class="pl30 sm-pl0 fz120 sm-fz100">レッスン内容例</h2>
+					</div>
+					<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
 				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
-					<a href="/vocal" class="hov course1"><span>vocal</span>ボーカル</a>
+			</div>
+			<div class="cols gutter-70 gutter-md-40 jc-fe">
+				<div class="col-4 col-sm-6 sm-mr20 mt-80 sm-mt-80 z2">
+					<figure><img src="../img/lyrics/sec2-img1.jpg" width="314" height="290" class="img-rspsv" alt="レッスン内容例"></figure>
 				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
-					<a href="/guitar" class="hov course2"><span>guitar</span>ギター</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/bass" class="hov course3"><span>bass</span>ベース</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/drums" class="hov course4"><span>drums</span>ドラム</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/keyboard" class="hov course5"><span>keyboard</span>ベース</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/dtm" class="hov course6"><span>DTM</span>デスクトップミュージック</a>
+				<div class="col-9 col-sm-12 return-1 return-sm-0 mt50 sm-mt-20 z1">
+					<div class="bgc-white ptb60 pl80 pr60 sm-ptb40 sm-pl30 sm-pr30 bdrs15">
+						<section>
+							<h3 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 01</h3>
+							<p class="mt25">メロディの作り方から和音の仕組み、形式、曲のまとめ方など作曲に必要な基本をを学びながら様々な曲の分析をしていきます。なかなか学ぶ機会の無い作詞も メロディー・リズム・コードとの相性を学んでいきます。</p>
+						</section>
+						<section class="mt30">
+							<h3 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 02</h3>
+							<p class="mt25">作品のベースとなるメロディーやコードについてスキルアップを図り、楽曲のクオリティを高めていきます。伴奏付けや変奏などを通して、曲に変化をつける方法を身につけます。</p>
+						</section>
+						<section class="mt30">
+							<h3 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 03</h3>
+							<p class="mt25">曲作りにおける和音と単音の関係性や和声・音楽理論を学んでいきます。
+								メロディーに対する歌詞の乗せ方からコードのアプローチ方法などを学び、更なるスキルアップにつなげます。</p>
+						</section>
+					</div>
 				</div>
 			</div>
 		</section>
-
+		
 	</section>
 </main>
 
