--- a/html/15_singing.html
+++ b/html/15_singing.html
@@ -103,43 +103,69 @@
 						<p class="mt15">声楽は初めてという方でも、呼吸法や発声、身体の使い方、ソルフェージュなど、丁寧に指導いたします。声楽で進学を目指す方から、趣味の方まで幅広く対応しています。歌曲や合唱、ミュージカル、シャンソン、童謡など楽しく歌いましょう！</p>
 					</div>
 					<div class="col-6 col-sm-10 sm-mt40">
-						<figure><img src="../img/singing/sec1-img1.png" width="446" height="437" class="img-rspsv" alt="ウクレレ"></figure>
+						<figure><img src="../img/singing/sec1-img1.png" width="446" height="437" class="img-rspsv" alt="声楽"></figure>
 					</div>
 				</div>
 			</div>
 		</section>
 					
 		<!-- #sec2 -->
-
-		<!-- #sec3 -->
-
-		<!-- #sec4 -->
-		<section id="sec4" class="course-link pb40 bgc-lightgray sm-plr20">
-			<div class="cols gutter-20 gutter-sm-10">
-				<div class="col-12 mt-20">
-					<h3 class="ribbon-black -lightgray">バンド系コース</h3>
+		<section id="sec2" class="bgc-lightgray bg-nami mt150 sm-mt100 ptb100 sm-ptb50 mb130 md-mb100 sm-mb80">
+			<div class="cols gutter-70 gutter-md-40 jc-fe sm-jc-fs">
+				<div class="col-8">
+					<div class="d-f sm-d-b ai-fe">
+						<p class="ff-en fz270 lh100">lesson</p>
+						<h2 class="pl30 sm-pl0 fz120 sm-fz100">レッスン内容例</h2>
+					</div>
+					<img src="../img/base/ic-dot.png" width="20" height="5" class="img-rspsv" alt="dot">
 				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
-					<a href="/vocal" class="hov course1"><span>vocal</span>ボーカル</a>
+			</div>
+			<div class="cols gutter-70 gutter-md-40 jc-fe">
+				<div class="col-4 col-sm-6 sm-mr20 mt-80 sm-mt-80 z2">
+					<figure><img src="../img/singing/sec3-img1.jpg" width="314" height="290" class="img-rspsv" alt="レッスン内容例"></figure>
 				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
-					<a href="/guitar" class="hov course2"><span>guitar</span>ギター</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/bass" class="hov course3"><span>bass</span>ベース</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/drums" class="hov course4"><span>drums</span>ドラム</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/keyboard" class="hov course5"><span>keyboard</span>ベース</a>
-				</div>
-				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
-					<a href="/dtm" class="hov course6"><span>DTM</span>デスクトップミュージック</a>
+				<div class="col-9 col-sm-12 return-1 return-sm-0 mt50 sm-mt-20 z1">
+					<div class="bgc-white ptb60 pl80 pr60 sm-ptb40 sm-pl30 sm-pr30 bdrs15">
+						<section>
+							<h3 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 01</h3>
+							<p class="mt25">基本的な姿勢や呼吸法を習得し、ベルカントと呼ばれる自然で美しい基礎的な発声を身につけていきます。練習曲や簡単な歌曲を歌っていき、音程やリズムを正しく取れるようトレーニングします。</p>
+						</section>
+						<section class="mt30">
+							<h3 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 02</h3>
+							<p class="mt25">初級で学んだ基礎を活かしながら、徐々にイタリア歌曲を中心に歌っていきます。声楽を学ぶにあたって一番負担のかからない発声ができると言われるイタリア語の発音はもちろん、歌詞の内容なども学び、表現力も養います。</p>
+						</section>
+						<section class="mt30">
+							<h3 class="c-white ff-sofia bgc-blue d-ib bdrs5 ptb5 plr20">STEP 03</h3>
+							<p class="mt25">イタリア歌曲だけでなく、ドイツ歌曲やフランス歌曲、日本歌曲などの様々な言語の歌曲にも挑戦し、言語ごとの正しい発声や音符への歌詞の割り振り方などを学んでいきます。また、簡単なオペラのアリアにも挑戦します。</p>
+						</section>
+					</div>
 				</div>
 			</div>
 		</section>
 
+		<!-- #sec3 -->
+		<section id="sec3" class="course-link pb40 bgc-gray sm-plr20">
+			<div class="cols gutter-20 gutter-sm-10">
+				<div class="col-12 mt-20">
+					<h3 class="ribbon-black -gray">クラシック系・弦楽器コース</h3>
+				</div>
+				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
+					<a href="/piano" class="hov course7"><span>piano</span>ピアノ</a>
+				</div>
+				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt20">
+					<a href="/violin" class="hov course8"><span>violin / viola</span>バイオリン・ビオラ</a>
+				</div>
+				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
+					<a href="/cello" class="hov course9"><span>cello</span>チェロ</a>
+				</div>
+				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
+					<a href="/ukulele" class="hov course10"><span>ukulele</span>ウクレレ</a>
+				</div>
+				<div class="col-3 col-md-4 col-sm-6 mt20 sm-mt10">
+					<a href="/singing" class="hov course11"><span>singing</span>声楽</a>
+				</div>
+			</div>
+		</section>
 	</section>
 </main>
 
